--- a/src/front-end/coming-soon.html
+++ b/src/front-end/coming-soon.html
@@ -88,22 +88,26 @@
                             <div class="social-footer">
                                 <ul class="social-icon">
                                     <li>
-                                        <a href="#">
+                                        <a role="button"
+  tabIndex="0">
                                             <i class="feather-facebook hi-icon"></i>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">
+                                        <a role="button"
+  tabIndex="0">
                                             <i class="feather-linkedin hi-icon"></i>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">
+                                        <a role="button"
+  tabIndex="0">
                                             <i class="feather-twitter hi-icon"></i>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">
+                                        <a role="button"
+  tabIndex="0">
                                             <i class="feather-instagram hi-icon"></i>
                                         </a>
                                     </li>
