--- a/src/front-end/story-details.html
+++ b/src/front-end/story-details.html
@@ -56,7 +56,8 @@
 			<div class="container">
 				<nav class="navbar navbar-expand-lg header-nav p-0">
 					<div class="navbar-header">
-						<a id="mobile_btn" href="#">
+						<a id="mobile_btn" role="button"
+  tabIndex="0">
 							<span class="bar-icon">
 								<span></span>
 								<span></span>
@@ -82,18 +83,21 @@
 								<img src="assets/img/FUTURE CONNECT LOGO - LONG - WHITE.svg" alt="Logo"
 									class="img-fluid">
 							</a>
-							<a id="menu_close" class="menu-close" href="#"> <i class="fas fa-times"></i></a>
+							<a id="menu_close" class="menu-close" role="button"
+  tabIndex="0"> <i class="fas fa-times"></i></a>
 						</div>
 						<ul class="main-nav navbar-nav">
 							<li><a href="index.html" class="nav-link active">Home</a></li>
 
 							<li class="has-submenu">
-								<a href="#">Talents <i class="fas fa-chevron-down"></i></a>
+								<a role="button"
+  tabIndex="0">Talents <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
 									<li><a href="talents.html">All Talents</a></li>
 									<li><a href="register-talent.html">Register as Talent</a></li>
 									<li class="has-submenu">
-										<a href="#">Talent Categories <i class="fas fa-chevron-right"></i></a>
+										<a role="button"
+  tabIndex="0">Talent Categories <i class="fas fa-chevron-right"></i></a>
 										<ul class="submenu">
 											<li><a href="talents.html?category=music">Music & Performance</a></li>
 											<li><a href="talents.html?category=tech">Tech & Coding</a></li>
@@ -115,12 +119,14 @@
 </li>
 
 							<li class="has-submenu">
-								<a href="#">Stories <i class="fas fa-chevron-down"></i></a>
+								<a role="button"
+  tabIndex="0">Stories <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
 									<li><a href="stories.html">All Stories</a></li>
 									<li><a href="upload-story.html">Upload Story</a></li>
 									<li class="has-submenu">
-										<a href="#">Talent Categories <i class="fas fa-chevron-right"></i></a>
+										<a role="button"
+  tabIndex="0">Talent Categories <i class="fas fa-chevron-right"></i></a>
 										<ul class="submenu">
 											<li><a href="stories.html?category=music">Music & Performance</a></li>
 											<li><a href="stories.html?category=tech">Tech & Coding</a></li>
@@ -146,20 +152,23 @@
 					<div class="d-flex align-items-center">
 
 						<div class="nav-item dropdown flag-nav nav-item-box nav-item-box-home me-3">
-							<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#"
+							<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button"
+  tabIndex="0"
 								role="button">
 								<i class="ti ti-sun-high"></i>
 								<i class="ti ti-moon"></i>
 							</a>
 							<ul class="dropdown-menu p-2">
 								<li class="mb-1">
-									<a href="#" class="dropdown-item active theme-toggle rounded-2"
+									<a role="button"
+  tabIndex="0" class="dropdown-item active theme-toggle rounded-2"
 										id="light-mode-toggle">
 										<i class="ti ti-sun-high me-2"></i>Light Mode
 									</a>
 								</li>
 								<li>
-									<a href="#" class="dropdown-item theme-toggle rounded-2"
+									<a role="button"
+  tabIndex="0" class="dropdown-item theme-toggle rounded-2"
 										id="dark-mode-toggle">
 										<i class="ti ti-moon me-2"></i>Dark Mode
 									</a>
@@ -217,7 +226,8 @@
 					<div class="col-lg-8">
 						<!-- Talent Profile Header -->
 						<div class="breadcrumb-bar breadcrumb-bar-info breadcrumb-info text-start pt-0 bg-white">
-							<a href="#" class="badge bg-light mb-4 text-dark">
+							<a role="button"
+  tabIndex="0" class="badge bg-light mb-4 text-dark">
 								Digital Arts & Design
 							</a>
 							<h2 class="breadcrumb-title">
@@ -320,32 +330,37 @@
 							<div class="listing-slider">
 								<ul class="nav nav-tabs" role="tablist">
 									<li class="nav-item" role="presentation">
-										<a href="#" class="nav-link active" data-bs-toggle="tab"
+										<a role="button"
+  tabIndex="0" class="nav-link active" data-bs-toggle="tab"
 											data-bs-target="#about_me" aria-selected="false" role="tab" tabindex="-1">
 											About Me
 										</a>
 									</li>
 									<li class="nav-item" role="presentation">
-										<a href="#" class="nav-link" data-bs-toggle="tab"
+										<a role="button"
+  tabIndex="0" class="nav-link" data-bs-toggle="tab"
 											data-bs-target="#work_me" aria-selected="false" role="tab" tabindex="-1">
 											Why Work With me
 										</a>
 									</li>
 									<li>
-										<a href="#" class="nav-link" data-bs-toggle="tab"
+										<a role="button"
+  tabIndex="0" class="nav-link" data-bs-toggle="tab"
 											data-bs-target="#faq" aria-selected="false" role="tab" tabindex="-1">
 											FAQ
 										</a>
 									</li>
 									<li>
-										<a href="#" class="nav-link" data-bs-toggle="tab"
+										<a role="button"
+  tabIndex="0" class="nav-link" data-bs-toggle="tab"
 											data-bs-target="#recent_works" aria-selected="false" role="tab"
 											tabindex="-1">
 											Recent Works
 										</a>
 									</li>
 									<li>
-										<a href="#" class="nav-link" data-bs-toggle="tab"
+										<a role="button"
+  tabIndex="0" class="nav-link" data-bs-toggle="tab"
 											data-bs-target="#review" aria-selected="false" role="tab" tabindex="-1">
 											Reviews
 										</a>
@@ -495,7 +510,8 @@
 												<div class="filters-wrap sort-categories justify-content-end">
 													<div class="collapse-card float-lg-end">
 														<div class="filter-header">
-															<a href="#" class="sorts-list">
+															<a role="button"
+  tabIndex="0" class="sorts-list">
 																Most Recent
 															</a>
 														</div>
@@ -609,7 +625,8 @@
 													</div>
 													<div class="reviewer-info">
 														<div class="reviewer-loc">
-															<h6><a href="#">kadajsalamander</a></h6>
+															<h6><a role="button"
+  tabIndex="0">kadajsalamander</a></h6>
 														</div>
 														<div class="reviewer-rating">
 															<div class="star-rate">
@@ -630,7 +647,8 @@
 														I am extremely impressed with their work. From start to finish,
 														the freelancer was professional, efficient, and a pleasure to
 														work with.</p>
-													<a href="#" class="reply-btn bg-light"><i
+													<a role="button"
+  tabIndex="0" class="reply-btn bg-light"><i
 															class="feather-corner-up-left"></i>Reply</a>
 												</div>
 											</div>
@@ -643,7 +661,8 @@
 													</div>
 													<div class="reviewer-info">
 														<div class="reviewer-loc">
-															<h6><a href="#">kadajsalamander</a></h6>
+															<h6><a role="button"
+  tabIndex="0">kadajsalamander</a></h6>
 														</div>
 														<div class="reviewer-rating">
 															<div class="star-rate">
@@ -664,7 +683,8 @@
 														I am extremely impressed with their work. From start to finish,
 														the freelancer was professional, efficient, and a pleasure to
 														work with.</p>
-													<a href="#" class="reply-btn bg-light"><i
+													<a role="button"
+  tabIndex="0" class="reply-btn bg-light"><i
 															class="feather-corner-up-left"></i>Reply</a>
 												</div>
 											</div>
@@ -715,7 +735,8 @@
 											</div>
 										</div>
 									</div>
-									<a href="#" class="btn btn-primary member-btn"> Submit a Review </a>
+									<a role="button"
+  tabIndex="0" class="btn btn-primary member-btn"> Submit a Review </a>
 								</div>
 								<!-- /Review Tags -->
 							</div>
@@ -769,7 +790,8 @@
 								</div>
 							</div>
 
-							<a href="#" data-bs-toggle="modal" data-bs-target="#support_talent"
+							<a role="button"
+  tabIndex="0" data-bs-toggle="modal" data-bs-target="#support_talent"
 								class="btn btn-primary w-100 mb-0">
 								<i class="feather-heart"></i> Support This Talent
 							</a>
@@ -792,7 +814,8 @@
 								<p>Hello, I'm Adrian, a passionate digital storyteller and performer blending visual art
 									and technology.<span class="more-content"> I create immersive experiences that
 										inspire and uplift communities.</span></p>
-								<a href="#" class="read-more">Read More</a>
+								<a role="button"
+  tabIndex="0" class="read-more">Read More</a>
 							</div>
 
 							<div class="member-info member-info-new">
@@ -826,7 +849,8 @@
 								</div>
 							</div>
 
-							<a href="#" data-bs-toggle="modal" data-bs-target="#contact_talent"
+							<a role="button"
+  tabIndex="0" data-bs-toggle="modal" data-bs-target="#contact_talent"
 								class="btn btn-outline-primary mb-0 w-100">Contact Talent</a>
 						</div>
 
@@ -834,11 +858,16 @@
 							<h5 class="">Share Talent Profile</h5>
 							<div class="social-links d-flex align-items-center breadcrumb-social pt-2">
 								<ul>
-									<li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-									<li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
-									<li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-									<li><a href="#"><i class="fa-brands fa-google"></i></a></li>
-									<li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+									<li><a role="button"
+  tabIndex="0"><i class="fa-brands fa-facebook"></i></a></li>
+									<li><a role="button"
+  tabIndex="0"><i class="fa-brands fa-x-twitter"></i></a></li>
+									<li><a role="button"
+  tabIndex="0"><i class="fa-brands fa-instagram"></i></a></li>
+									<li><a role="button"
+  tabIndex="0"><i class="fa-brands fa-google"></i></a></li>
+									<li><a role="button"
+  tabIndex="0"><i class="fa-brands fa-youtube"></i></a></li>
 								</ul>
 							</div>
 						</div>
@@ -885,9 +914,11 @@
 														class="fa-solid fa-meteor"></i>Hot</span></a>
 										</div>
 										<div class="fav-selection">
-											<a href="#" class="video-icon"><i
+											<a role="button"
+  tabIndex="0" class="video-icon"><i
 													class="feather-video"></i></a>
-											<a href="#" class="fav-icon"><i
+											<a role="button"
+  tabIndex="0" class="fav-icon"><i
 													class="feather-heart"></i></a>
 										</div>
 										<div class="user-thumb">
@@ -910,7 +941,8 @@
 										</div>
 										<div class="gigs-card-footer">
 											<div>
-												<a href="#" class="share-icon"><i
+												<a role="button"
+  tabIndex="0" class="share-icon"><i
 														class="feather-share-2"></i></a>
 												<span class="badge">Delivery in 1 day</span>
 											</div>
@@ -935,7 +967,8 @@
 											</div>
 										</div>
 										<div class="fav-selection">
-											<a href="#" class="fav-icon"><i
+											<a role="button"
+  tabIndex="0" class="fav-icon"><i
 													class="feather-heart"></i></a>
 										</div>
 										<div class="user-thumb">
@@ -958,7 +991,8 @@
 										</div>
 										<div class="gigs-card-footer">
 											<div>
-												<a href="#" class="share-icon"><i
+												<a role="button"
+  tabIndex="0" class="share-icon"><i
 														class="feather-share-2"></i></a>
 												<span class="badge">Delivery in 2 day</span>
 											</div>
@@ -983,7 +1017,8 @@
 											</div>
 										</div>
 										<div class="fav-selection">
-											<a href="#" class="fav-icon"><i
+											<a role="button"
+  tabIndex="0" class="fav-icon"><i
 													class="feather-heart"></i></a>
 										</div>
 										<div class="user-thumb">
@@ -1006,7 +1041,8 @@
 										</div>
 										<div class="gigs-card-footer">
 											<div>
-												<a href="#" class="share-icon"><i
+												<a role="button"
+  tabIndex="0" class="share-icon"><i
 														class="feather-share-2"></i></a>
 												<span class="badge">Delivery in 1 day</span>
 											</div>
@@ -1034,7 +1070,8 @@
 											<span class="badge bg-danger"><i class="fa-solid fa-meteor"></i>Hot</span>
 										</div>
 										<div class="fav-selection">
-											<a href="#" class="fav-icon"><i
+											<a role="button"
+  tabIndex="0" class="fav-icon"><i
 													class="feather-heart"></i></a>
 										</div>
 										<div class="user-thumb">
@@ -1057,7 +1094,8 @@
 										</div>
 										<div class="gigs-card-footer">
 											<div>
-												<a href="#" class="share-icon"><i
+												<a role="button"
+  tabIndex="0" class="share-icon"><i
 														class="feather-share-2"></i></a>
 												<span class="badge">Delivery in 2 day</span>
 											</div>
@@ -1158,11 +1196,16 @@
 						</a>
 						<div class="social-links">
 							<ul>
-								<li class="me-2"><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-								<li class="me-2"><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
-								<li class="me-2"><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-								<li class="me-2"><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
-								<li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+								<li class="me-2"><a role="button"
+  tabIndex="0"><i class="fa-brands fa-facebook"></i></a></li>
+								<li class="me-2"><a role="button"
+  tabIndex="0"><i class="fa-brands fa-x-twitter"></i></a></li>
+								<li class="me-2"><a role="button"
+  tabIndex="0"><i class="fa-brands fa-instagram"></i></a></li>
+								<li class="me-2"><a role="button"
+  tabIndex="0"><i class="fa-brands fa-linkedin"></i></a></li>
+								<li><a role="button"
+  tabIndex="0"><i class="fa-brands fa-youtube"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -1256,7 +1299,8 @@
 							<!-- Terms -->
 							<div class="modal-form-group">
 								<label class="custom_check mt-0 mb-0 ps-4">
-									I agree to the <a href="#">Terms & Conditions</a>
+									I agree to the <a role="button"
+  tabIndex="0">Terms & Conditions</a>
 									<input type="checkbox" name="agree">
 									<span class="checkmark"></span>
 								</label>
@@ -1265,7 +1309,8 @@
 
 						<!-- Submit Button -->
 						<div class="modal-btn">
-							<a href="#" class="btn btn-primary w-100">Support Now</a>
+							<a role="button"
+  tabIndex="0" class="btn btn-primary w-100">Support Now</a>
 						</div>
 					</div>
 				</div>
@@ -1346,7 +1391,8 @@
 									<div class="modal-btn">
 										<div class="row gx-2">
 											<div class="col-6">
-												<a href="#" data-bs-dismiss="modal"
+												<a role="button"
+  tabIndex="0" data-bs-dismiss="modal"
 													class="btn btn-secondary w-100 justify-content-center">Cancel</a>
 											</div>
 											<div class="col-6">
