--- a/src/front-end/talent-dashboard/add-gigs.html
+++ b/src/front-end/talent-dashboard/add-gigs.html
@@ -46,7 +46,8 @@
 			<div class="container">
 				<nav class="navbar navbar-expand-lg header-nav p-0">
 					<div class="navbar-header">
-						<a id="mobile_btn" href="#">
+						<a id="mobile_btn" role="button"
+  tabIndex="0">
 							<span class="bar-icon">
 								<span></span>
 								<span></span>
@@ -71,7 +72,8 @@
 							<a href="index.html" class="menu-logo dark-logo">
 								<img src="assets/img/dark-logo.svg" alt="Logo" class="img-fluid">
 							</a>
-							<a id="menu_close" class="menu-close" href="#"> <i class="fas fa-times"></i></a>
+							<a id="menu_close" class="menu-close" role="button"
+  tabIndex="0"> <i class="fas fa-times"></i></a>
 						</div>
 						<div class="mobile-profile">
 							<h6>Account</h6>
@@ -82,7 +84,8 @@
 						</div>
 						<ul class="main-nav navbar-nav">
 							<li class="has-submenu megamenu">
-							<a href="#" class="nav-link">Home<i class="fas fa-chevron-down"></i></a>
+							<a role="button"
+  tabIndex="0" class="nav-link">Home<i class="fas fa-chevron-down"></i></a>
 							<ul class="submenu mega-submenu">
 								<li>
 									<div class="megamenu-wrapper">
@@ -110,20 +113,24 @@
 											<div class="col-lg-3">
 												<div class="single-demo">
 													<div class="demo-img">
-														<a href="#" class="inner-demo-img"><img src="assets/img/home/coming-soon-01.jpg" class="img-fluid " alt="img"></a>
+														<a role="button"
+  tabIndex="0" class="inner-demo-img"><img src="assets/img/home/coming-soon-01.jpg" class="img-fluid " alt="img"></a>
 													</div>
 													<div class="demo-info">
-														<a href="#" class="inner-demo-img">Coming Soon</a>
+														<a role="button"
+  tabIndex="0" class="inner-demo-img">Coming Soon</a>
 													</div>
 												</div>
 											</div>
 											<div class="col-lg-3">
 												<div class="single-demo">
 													<div class="demo-img">
-														<a href="#" class="inner-demo-img"><img src="assets/img/home/coming-soon-02.jpg" class="img-fluid " alt="img"></a>
+														<a role="button"
+  tabIndex="0" class="inner-demo-img"><img src="assets/img/home/coming-soon-02.jpg" class="img-fluid " alt="img"></a>
 													</div>
 													<div class="demo-info">
-														<a href="#" class="inner-demo-img">Coming Soon</a>
+														<a role="button"
+  tabIndex="0" class="inner-demo-img">Coming Soon</a>
 													</div>
 												</div>
 											</div>
@@ -133,24 +140,28 @@
 							</ul>
 							</li>
 							<li class="has-submenu responsive-link">
-								<a href="#">home <i class="fas fa-chevron-down"></i></a>
+								<a role="button"
+  tabIndex="0">home <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
 									<li><a href="index.html">Home 1</a></li>
 									<li><a href="index-2.html">Home 2</a></li>
 								</ul>
 							</li>
 							<li class="has-submenu active">
-								<a href="#">Gigs <i class="fas fa-chevron-down"></i></a>
+								<a role="button"
+  tabIndex="0">Gigs <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
 									<li><a href="service.html">Gigs Grid</a></li>
 									<li><a href="service-grid-sidebar.html">Gigs Left Sidebar</a></li>
-									<li class="has-submenu"><a href="#">Gigs Details</a>
+									<li class="has-submenu"><a role="button"
+  tabIndex="0">Gigs Details</a>
 										<ul class="submenu">
 											<li><a href="service-details.html">Gigs Details 1</a></li>
 											<li><a href="service-details-2.html">Gigs Details 2</a></li>
 										</ul>
 									</li>
-									<li class="has-submenu"><a href="#">Gig Category</a>
+									<li class="has-submenu"><a role="button"
+  tabIndex="0">Gig Category</a>
 										<ul class="submenu">
 											<li><a href="categories.html">Gigs Category</a></li>
 											<li><a href="categories-2.html">Gigs Category 2</a></li>
@@ -163,11 +174,13 @@
 								</ul>
 							</li>	
 							<li class="has-submenu">
-								<a href="#">Pages <i class="fas fa-chevron-down"></i></a>
+								<a role="button"
+  tabIndex="0">Pages <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
 									<li><a href="about-us.html">About Us</a></li>									
 									<li class="has-submenu">
-										<a href="#">Our Team</a>
+										<a role="button"
+  tabIndex="0">Our Team</a>
 										<ul class="submenu">
 											<li><a href="team.html">Team Grid</a></li>
 											<li><a href="team-carousel.html">Team Carousel</a></li>
@@ -175,7 +188,8 @@
 										</ul>
 									</li>
 									<li class="has-submenu">
-										<a href="#">Authentication</a>
+										<a role="button"
+  tabIndex="0">Authentication</a>
 										<ul class="submenu">
 											<li><a href="signin.html">Login</a></li>
 											<li><a href="signup.html">Register</a></li>
@@ -185,14 +199,16 @@
 										</ul>
 									</li>
 									<li class="has-submenu">
-										<a href="#">Error pages</a>
+										<a role="button"
+  tabIndex="0">Error pages</a>
 										<ul class="submenu">
 											<li><a href="error-404.html">Error 404</a></li>
 											<li><a href="error-500.html">Error 500</a></li>
 										</ul>
 									</li>
 									<li class="has-submenu">
-										<a href="#">Portfolio</a>
+										<a role="button"
+  tabIndex="0">Portfolio</a>
 										<ul class="submenu">
                                             <li><a href="portfolio.html">Portfolio</a></li>
                                             <li><a href="portfolio-2.html">Portfolio 2</a></li>
@@ -202,7 +218,8 @@
 									</li>
 									<li><a href="faq.html">Faq</a></li>
 									<li class="has-submenu">
-										<a href="#">Testimonials</a>
+										<a role="button"
+  tabIndex="0">Testimonials</a>
 										<ul class="submenu">
 											<li><a href="announcements.html">Testimonials</a></li>
 											<li><a href="testimonials-carousel.html">Testimonials-Carousel</a></li>
@@ -216,10 +233,12 @@
 								</ul>
 							</li>
 							<li class="has-submenu">
-								<a href="#">Blog <i class="fas fa-chevron-down"></i></a>
+								<a role="button"
+  tabIndex="0">Blog <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
 									<li class="has-submenu">
-										<a href="#">Blog List</a>
+										<a role="button"
+  tabIndex="0">Blog List</a>
 										<ul class="submenu">
 											<li><a href="blog-list.html">Blog List</a></li>
 											<li><a href="blog-sidebar.html">Blog Left Sidebar</a></li>
@@ -227,7 +246,8 @@
 										</ul>
 									</li>
 									<li class="has-submenu">
-										<a href="#">Blog Grid</a>
+										<a role="button"
+  tabIndex="0">Blog Grid</a>
 										<ul class="submenu">
 											<li><a href="blog-2-grid.html">Blog 2 Grid</a></li>
 											<li><a href="blog.html">Blog 3 Grid</a></li>
@@ -235,7 +255,8 @@
 									</li>	
 									<li><a href="blog-carousel.html">Blog Carousal</a></li>									
 									<li class="has-submenu">
-										<a href="#">Blog Details</a>
+										<a role="button"
+  tabIndex="0">Blog Details</a>
 										<ul class="submenu">
 											<li><a href="blog-details.html">Blog Details</a></li>
 											<li><a href="blog-details-sidebar.html">Blog Details Left Sidebar</a></li>
@@ -245,9 +266,11 @@
 								</ul>
 							</li>				
 							<li class="has-submenu">
-								<a href="#">Dashboard <i class="fas fa-chevron-down"></i></a>
+								<a role="button"
+  tabIndex="0">Dashboard <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
-									<li class="has-submenu"><a href="#">Buyer Dashboard</a>
+									<li class="has-submenu"><a role="button"
+  tabIndex="0">Buyer Dashboard</a>
 										<ul class="submenu">
 											<li><a href="buyer-dashboard.html">Dashboard</a></li>
 											<li><a href="buyer-purchase.html">Purchase</a></li>
@@ -281,7 +304,8 @@
 								</ul>
 							</li>
 							<li class="has-submenu">
-								<a href="#">Contact <i class="fas fa-chevron-down"></i></a>
+								<a role="button"
+  tabIndex="0">Contact <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
 									<li><a href="contact-us.html">Contact V1</a></li>
 									<li><a href="contact-us-v2.html">Contact V2</a></li>
@@ -293,30 +317,35 @@
 
                    <div class="d-flex align-items-center">
 				<div class="nav-item dropdown flag-nav nav-item-box nav-item-box-home me-2">
-						<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">
+						<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button"
+  tabIndex="0" role="button">
 							<img src="assets/img/flags/us.svg" alt="Language" class="img-fluid">
 						</a>
 						<ul class="dropdown-menu p-2">
 							<li class="mb-1">
-								<a href="#" class="dropdown-item rounded-2 d-flex align-items-center">
+								<a role="button"
+  tabIndex="0" class="dropdown-item rounded-2 d-flex align-items-center">
 									<img src="assets/img/flags/us.svg" alt="" height="16" class="img-fluid me-2">
 									English
 								</a>
 							</li>
 							<li class="mb-1">
-								<a href="#" class="dropdown-item rounded-2 d-flex align-items-center">
+								<a role="button"
+  tabIndex="0" class="dropdown-item rounded-2 d-flex align-items-center">
 									<img src="assets/img/flags/de.svg" alt="" height="16" class="img-fluid me-2">
 									German
 								</a>
 							</li>
 							<li class="mb-1">
-								<a href="#" class="dropdown-item rounded-2 d-flex align-items-center">
+								<a role="button"
+  tabIndex="0" class="dropdown-item rounded-2 d-flex align-items-center">
 									<img src="assets/img/flags/fr.svg" alt="" height="16" class="img-fluid me-2">
 									French
 								</a>
 							</li>
 							<li>
-								<a href="#" class="dropdown-item rounded-2 d-flex align-items-center">
+								<a role="button"
+  tabIndex="0" class="dropdown-item rounded-2 d-flex align-items-center">
 									<img src="assets/img/flags/ae.svg" alt="" height="16" class="img-fluid me-2">
 									Arabic
 								</a>
@@ -324,25 +353,29 @@
 						</ul>
 				    </div>
 					<div class="nav-item dropdown flag-nav nav-item-box nav-item-box-home me-2">
-						<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">
+						<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button"
+  tabIndex="0" role="button">
                             <i class="ti ti-sun-high"></i>
                             <i class="ti ti-moon"></i>
                         </a>
 						<ul class="dropdown-menu p-2">
 							<li class="mb-1">
-								<a href="#" class="dropdown-item active theme-toggle rounded-2" id="light-mode-toggle">
+								<a role="button"
+  tabIndex="0" class="dropdown-item active theme-toggle rounded-2" id="light-mode-toggle">
 									<i class="ti ti-sun-high me-2"></i>Light Mode
 								</a>
 							</li>
 							<li>
-								<a href="#" class="dropdown-item theme-toggle rounded-2" id="dark-mode-toggle">
+								<a role="button"
+  tabIndex="0" class="dropdown-item theme-toggle rounded-2" id="dark-mode-toggle">
 									<i class="ti ti-moon me-2"></i>Dark Mode
 								</a>
 							</li>
 						</ul>
 					</div>
 					<div class="nav-item dropdown flag-nav nav-item-box nav-item-box-home me-3">
-						<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">
+						<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button"
+  tabIndex="0" role="button">
 							<i class="ti ti-bell"></i>
 							<span class="badge badge-pill"></span>
 						</a>
@@ -716,7 +749,8 @@
 								</div>
 								<div class="row">
 									<div class="col-md-12">
-										<a href="#" class="btn btn-dark amount-add"><i class="ti ti-plus"></i>Add New</a>
+										<a role="button"
+  tabIndex="0" class="btn btn-dark amount-add"><i class="ti ti-plus"></i>Add New</a>
 									</div>
 									<div class="col-md-12">									
 										<label class="custom_check extra-serv">
@@ -772,7 +806,8 @@
 									<label class="col-form-label">Upload images videos and more</label>									
 									<ul class="nav upload-list">
 										<li>
-											<a href="#" class="active" data-bs-toggle="tab" data-bs-target="#upload-img">
+											<a role="button"
+  tabIndex="0" class="active" data-bs-toggle="tab" data-bs-target="#upload-img">
 												<span>
 													<img src="assets/img/icons/upload-01.svg" alt="icon">
 												</span>
@@ -780,7 +815,8 @@
 											</a>
 										</li>
 										<li>
-											<a href="#" data-bs-toggle="tab" data-bs-target="#upload-video">
+											<a role="button"
+  tabIndex="0" data-bs-toggle="tab" data-bs-target="#upload-video">
 												<span>
 													<img src="assets/img/icons/upload-02.svg" alt="icon">
 												</span>
@@ -788,7 +824,8 @@
 											</a>
 										</li>
 										<li>
-											<a href="#" data-bs-toggle="tab" data-bs-target="#upload-link">
+											<a role="button"
+  tabIndex="0" data-bs-toggle="tab" data-bs-target="#upload-link">
 												<span>
 													<img src="assets/img/icons/upload-03.svg" alt="icon">
 												</span>
@@ -867,7 +904,8 @@
 									<h5 class="mb-1">FAQ</h5>
 									<p>Add Faq Related to Gig</p>
 							   </div>
-							   <a href="#" class="btn btn-dark mb-0"><i class="ti ti-plus"></i>Add New</a>
+							   <a role="button"
+  tabIndex="0" class="btn btn-dark mb-0"><i class="ti ti-plus"></i>Add New</a>
 							</div>
 							<div class="faq-wrapper faq-lists">
 								<div class="faq-card">
@@ -899,8 +937,10 @@
 					<!-- Upload -->					
 					<div class="col-lg-12"> 
 						<div class="btn-item text-center">
-							<a href="#" class="btn btn-light">Cancel</a>
-							<a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#success_gigs">Publish Gig</a>
+							<a role="button"
+  tabIndex="0" class="btn btn-light">Cancel</a>
+							<a role="button"
+  tabIndex="0" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#success_gigs">Publish Gig</a>
 						</div>
 					</div> 
 					<!-- /Upload -->
@@ -931,11 +971,16 @@
 								<p>Our mission is to lead the way in digital transformation and automation. We aim to enabling them to navigate the evolving digital landscape with confidence.</p>
 								<div class="social-links">
 									<ul>
-										<li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-										<li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
-										<li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-										<li><a href="#"><i class="fa-brands fa-google"></i></a></li>
-										<li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+										<li><a role="button"
+  tabIndex="0"><i class="fa-brands fa-facebook"></i></a></li>
+										<li><a role="button"
+  tabIndex="0"><i class="fa-brands fa-x-twitter"></i></a></li>
+										<li><a role="button"
+  tabIndex="0"><i class="fa-brands fa-instagram"></i></a></li>
+										<li><a role="button"
+  tabIndex="0"><i class="fa-brands fa-google"></i></a></li>
+										<li><a role="button"
+  tabIndex="0"><i class="fa-brands fa-youtube"></i></a></li>
 									</ul>
 								</div>
 							</div>
@@ -1019,10 +1064,12 @@
 							</div>
 							<div class="col-xl-3 text-xl-end">
 								<div class="paypal-icons">
-									<a href="#">
+									<a role="button"
+  tabIndex="0">
 										<img src="assets/img/icons/stripe-icon.svg" alt="icon">
 									</a>
-									<a href="#">
+									<a role="button"
+  tabIndex="0">
 										<img src="assets/img/icons/paypal-icon.svg" alt="icon">
 									</a>
 								</div>
