--- a/src/front-end/talent-dashboard/seller-my-buyer.html
+++ b/src/front-end/talent-dashboard/seller-my-buyer.html
@@ -61,45 +61,53 @@
 					</ul>
 				</div>
                 <div class="nav-item dropdown dropdown-menu-end flag-nav nav-item-box">
-                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">
+                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button"
+  tabIndex="0" role="button">
                         <img src="assets/img/flags/us.svg" alt="Language" class="img-fluid">
                     </a>
                     <ul class="dropdown-menu p-2">
                         <li>
-                            <a href="#" class="dropdown-item justify-content-start">
+                            <a role="button"
+  tabIndex="0" class="dropdown-item justify-content-start">
                                 <img src="assets/img/flags/us.svg" alt="" height="16" class="me-2"> English
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="dropdown-item justify-content-start">
+                            <a role="button"
+  tabIndex="0" class="dropdown-item justify-content-start">
                                 <img src="assets/img/flags/de.svg" alt="" height="16" class="me-2"> German
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="dropdown-item justify-content-start">
+                            <a role="button"
+  tabIndex="0" class="dropdown-item justify-content-start">
                                 <img src="assets/img/flags/fr.svg" alt="" height="16" class="me-2"> French
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="dropdown-item justify-content-start">
+                            <a role="button"
+  tabIndex="0" class="dropdown-item justify-content-start">
                                 <img src="assets/img/flags/ae.svg" alt="" height="16" class="me-2"> Arabic
                             </a>
                         </li>
                     </ul>
                 </div>
                 <div class="nav-item dropdown flag-nav nav-item-box">
-                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">
+                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button"
+  tabIndex="0" role="button">
                         <i class="ti ti-sun-high"></i>
                         <i class="ti ti-moon"></i>
                     </a>
                     <ul class="dropdown-menu p-2">
                         <li class="mb-1">
-                            <a href="#" class="dropdown-item active theme-toggle" id="light-mode-toggle">
+                            <a role="button"
+  tabIndex="0" class="dropdown-item active theme-toggle" id="light-mode-toggle">
                                 <i class="ti ti-sun-high me-1"></i>Light Mode
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="dropdown-item theme-toggle" id="dark-mode-toggle">
+                            <a role="button"
+  tabIndex="0" class="dropdown-item theme-toggle" id="dark-mode-toggle">
                                 <i class="ti ti-moon me-1"></i>Dark Mode
                             </a>
                         </li>
@@ -246,7 +254,8 @@
                 </div>
                 </div>
                 <div class="mobile-user-menu">
-                    <a href="#" class="dropdown-toggle d-flex align-items-center" data-bs-toggle="dropdown">
+                    <a role="button"
+  tabIndex="0" class="dropdown-toggle d-flex align-items-center" data-bs-toggle="dropdown">
                         <span class="avatar online avatar-sm">
 						<img src="assets/img/user/user-04.jpg" alt="Img" class="img-fluid rounded-circle">
 					</span>
@@ -313,7 +322,8 @@
 					<a href="seller-dashboard.html" class="dark-logo">
 						<img src="assets/img/dark-logo.svg" alt="Logo" class="img-fluid">
 					</a>
-					<a id="toggle_btn" href="#" class="active">
+					<a id="toggle_btn" role="button"
+  tabIndex="0" class="active">
 						<i class="ti ti-arrow-bar-right"></i>
 					</a>
 				</div>	
@@ -404,8 +414,10 @@
                     <div class="col-xl-4 col-md-6">
                         <div class="card">
                             <div class="card-body text-center">
-                                <span class="avatar"><a href="#"><img class="rounded-pill" src="assets/img/user/user-13.jpg" alt="img"></a></span>
-                                <h6 class="mb-1"><a href="#">Sophia Chen</a></h6>
+                                <span class="avatar"><a role="button"
+  tabIndex="0"><img class="rounded-pill" src="assets/img/user/user-13.jpg" alt="img"></a></span>
+                                <h6 class="mb-1"><a role="button"
+  tabIndex="0">Sophia Chen</a></h6>
                                 <p>UI/UX Designer</p>
                                 <p class="mb-0 location-text d-inline-flex align-items-center"><img src="assets/img/flags/switzerland.svg" alt="img" class="me-1">Switzerland <i class="ti ti-point-filled mx-1"></i> Total Gigs : 45</p>
                             </div>
@@ -414,8 +426,10 @@
                     <div class="col-xl-4 col-md-6">
                         <div class="card">
                             <div class="card-body text-center">
-                                <span class="avatar"><a href="#"><img class="rounded-pill" src="assets/img/user/user-18.jpg" alt="img"></a></span>
-                                <h6 class="mb-1"><a href="#">Ethan Reynolds</a></h6>
+                                <span class="avatar"><a role="button"
+  tabIndex="0"><img class="rounded-pill" src="assets/img/user/user-18.jpg" alt="img"></a></span>
+                                <h6 class="mb-1"><a role="button"
+  tabIndex="0">Ethan Reynolds</a></h6>
                                 <p>Software Engineer</p>
                                 <p class="mb-0 location-text d-inline-flex align-items-center"><img src="assets/img/flags/malaysia.svg" alt="img" class="me-1">Malaysia <i class="ti ti-point-filled mx-1"></i> Total Gigs : 12</p>
                             </div>
@@ -424,8 +438,10 @@
                     <div class="col-xl-4 col-md-6">
                         <div class="card">
                             <div class="card-body text-center">
-                                <span class="avatar"><a href="#"><img class="rounded-pill" src="assets/img/user/user-03.jpg" alt="img"></a></span>
-                                <h6 class="mb-1"><a href="#">Isabella Martinez</a></h6>
+                                <span class="avatar"><a role="button"
+  tabIndex="0"><img class="rounded-pill" src="assets/img/user/user-03.jpg" alt="img"></a></span>
+                                <h6 class="mb-1"><a role="button"
+  tabIndex="0">Isabella Martinez</a></h6>
                                 <p>Cybersecurity Analyst</p>
                                 <p class="mb-0 location-text d-inline-flex align-items-center"><img src="assets/img/flags/us.svg" alt="img" class="me-1">USA <i class="ti ti-point-filled mx-1"></i> Total Gigs : 15</p>
                             </div>
@@ -434,8 +450,10 @@
                     <div class="col-xl-4 col-md-6">
                         <div class="card">
                             <div class="card-body text-center">
-                                <span class="avatar"><a href="#"><img class="rounded-pill" src="assets/img/user/user-09.jpg" alt="img"></a></span>
-                                <h6 class="mb-1"><a href="#">Liam Carter</a></h6>
+                                <span class="avatar"><a role="button"
+  tabIndex="0"><img class="rounded-pill" src="assets/img/user/user-09.jpg" alt="img"></a></span>
+                                <h6 class="mb-1"><a role="button"
+  tabIndex="0">Liam Carter</a></h6>
                                 <p>FinTech Innovator</p>
                                 <p class="mb-0 location-text d-inline-flex align-items-center"><img src="assets/img/flags/turkey.svg" alt="img" class="me-1">Turkey <i class="ti ti-point-filled mx-1"></i> Total Gigs : 22</p>
                             </div>
@@ -444,8 +462,10 @@
                     <div class="col-xl-4 col-md-6">
                         <div class="card">
                             <div class="card-body text-center">
-                                <span class="avatar"><a href="#"><img class="rounded-pill" src="assets/img/user/user-08.jpg" alt="img"></a></span>
-                                <h6 class="mb-1"><a href="#">Sam Taylor</a></h6>
+                                <span class="avatar"><a role="button"
+  tabIndex="0"><img class="rounded-pill" src="assets/img/user/user-08.jpg" alt="img"></a></span>
+                                <h6 class="mb-1"><a role="button"
+  tabIndex="0">Sam Taylor</a></h6>
                                 <p>Software Engineer</p>
                                 <p class="mb-0 location-text d-inline-flex align-items-center"><img src="assets/img/flags/malaysia.svg" alt="img" class="me-1">Malaysia <i class="ti ti-point-filled mx-1"></i> Total Gigs : 12</p>
                             </div>
@@ -454,8 +474,10 @@
                     <div class="col-xl-4 col-md-6">
                         <div class="card">
                             <div class="card-body text-center">
-                                <span class="avatar"><a href="#"><img class="rounded-pill" src="assets/img/user/user-15.jpg" alt="img"></a></span>
-                                <h6 class="mb-1"><a href="#">livia Rivera</a></h6>
+                                <span class="avatar"><a role="button"
+  tabIndex="0"><img class="rounded-pill" src="assets/img/user/user-15.jpg" alt="img"></a></span>
+                                <h6 class="mb-1"><a role="button"
+  tabIndex="0">livia Rivera</a></h6>
                                 <p>Finance Manager</p>
                                 <p class="mb-0 location-text d-inline-flex align-items-center"><img src="assets/img/flags/singapore.svg" alt="img" class="me-1">Singapore <i class="ti ti-point-filled mx-1"></i> Total Gigs : 21</p>
                             </div>
@@ -464,8 +486,10 @@
                     <div class="col-xl-4 col-md-6">
                         <div class="card">
                             <div class="card-body text-center">
-                                <span class="avatar"><a href="#"><img class="rounded-pill" src="assets/img/user/user-05.jpg" alt="img"></a></span>
-                                <h6 class="mb-1"><a href="#">Noah Pate</a></h6>
+                                <span class="avatar"><a role="button"
+  tabIndex="0"><img class="rounded-pill" src="assets/img/user/user-05.jpg" alt="img"></a></span>
+                                <h6 class="mb-1"><a role="button"
+  tabIndex="0">Noah Pate</a></h6>
                                 <p>Data Analyst</p>
                                 <p class="mb-0 location-text d-inline-flex align-items-center"><img src="assets/img/flags/uae.svg" alt="img" class="me-1">UAE <i class="ti ti-point-filled mx-1"></i> Total Gigs : 39</p>
                             </div>
@@ -474,8 +498,10 @@
                     <div class="col-xl-4 col-md-6">
                         <div class="card">
                             <div class="card-body text-center">
-                                <span class="avatar"><a href="#"><img class="rounded-pill" src="assets/img/user/user-10.jpg" alt="img"></a></span>
-                                <h6 class="mb-1"><a href="#">Ava Thompson</a></h6>
+                                <span class="avatar"><a role="button"
+  tabIndex="0"><img class="rounded-pill" src="assets/img/user/user-10.jpg" alt="img"></a></span>
+                                <h6 class="mb-1"><a role="button"
+  tabIndex="0">Ava Thompson</a></h6>
                                 <p>Crypto</p>
                                 <p class="mb-0 location-text d-inline-flex align-items-center"><img src="assets/img/flags/switzerland.svg" alt="img" class="me-1">Switzerland <i class="ti ti-point-filled mx-1"></i> Total Gigs: 22</p>
                             </div>
@@ -484,8 +510,10 @@
                     <div class="col-xl-4 col-md-6">
                         <div class="card">
                             <div class="card-body text-center">
-                                <span class="avatar"><a href="#"><img class="rounded-pill" src="assets/img/user/user-16.jpg" alt="img"></a></span>
-                                <h6 class="mb-1"><a href="#">James Lawson</a></h6>
+                                <span class="avatar"><a role="button"
+  tabIndex="0"><img class="rounded-pill" src="assets/img/user/user-16.jpg" alt="img"></a></span>
+                                <h6 class="mb-1"><a role="button"
+  tabIndex="0">James Lawson</a></h6>
                                 <p>Design</p>
                                 <p class="mb-0 location-text d-inline-flex align-items-center"><img src="assets/img/flags/uruguay.svg" alt="img" class="me-1">Uruguay <i class="ti ti-point-filled mx-1"></i> Total Gigs : 16</p>
                             </div>
@@ -493,7 +521,8 @@
                     </div>
                 </div>
                 <div class="text-center">
-                    <a href="#" class="btn btn-lg btn-dark d-inline-flex align-items-center"><i class="ti ti-loader-3 me-2"></i>Load More</a>
+                    <a role="button"
+  tabIndex="0" class="btn btn-lg btn-dark d-inline-flex align-items-center"><i class="ti ti-loader-3 me-2"></i>Load More</a>
                 </div>
             </div>
         </div>
