--- a/src/front-end/talent-dashboard/seller-profile.html
+++ b/src/front-end/talent-dashboard/seller-profile.html
@@ -71,45 +71,53 @@
 					</ul>
 				</div>
                 <div class="nav-item dropdown dropdown-menu-end flag-nav nav-item-box">
-                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">
+                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button"
+  tabIndex="0" role="button">
                         <img src="assets/img/flags/us.svg" alt="Language" class="img-fluid">
                     </a>
                     <ul class="dropdown-menu p-2">
                         <li>
-                            <a href="#" class="dropdown-item justify-content-start">
+                            <a role="button"
+  tabIndex="0" class="dropdown-item justify-content-start">
                                 <img src="assets/img/flags/us.svg" alt="" height="16" class="me-2"> English
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="dropdown-item justify-content-start">
+                            <a role="button"
+  tabIndex="0" class="dropdown-item justify-content-start">
                                 <img src="assets/img/flags/de.svg" alt="" height="16" class="me-2"> German
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="dropdown-item justify-content-start">
+                            <a role="button"
+  tabIndex="0" class="dropdown-item justify-content-start">
                                 <img src="assets/img/flags/fr.svg" alt="" height="16" class="me-2"> French
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="dropdown-item justify-content-start">
+                            <a role="button"
+  tabIndex="0" class="dropdown-item justify-content-start">
                                 <img src="assets/img/flags/ae.svg" alt="" height="16" class="me-2"> Arabic
                             </a>
                         </li>
                     </ul>
                 </div>
                 <div class="nav-item dropdown flag-nav nav-item-box">
-                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">
+                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button"
+  tabIndex="0" role="button">
                         <i class="ti ti-sun-high"></i>
                         <i class="ti ti-moon"></i>
                     </a>
                     <ul class="dropdown-menu p-2">
                         <li class="mb-1">
-                            <a href="#" class="dropdown-item active theme-toggle" id="light-mode-toggle">
+                            <a role="button"
+  tabIndex="0" class="dropdown-item active theme-toggle" id="light-mode-toggle">
                                 <i class="ti ti-sun-high me-1"></i>Light Mode
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="dropdown-item theme-toggle" id="dark-mode-toggle">
+                            <a role="button"
+  tabIndex="0" class="dropdown-item theme-toggle" id="dark-mode-toggle">
                                 <i class="ti ti-moon me-1"></i>Dark Mode
                             </a>
                         </li>
@@ -256,7 +264,8 @@
                 </div>
                 </div>
                 <div class="mobile-user-menu">
-                    <a href="#" class="dropdown-toggle d-flex align-items-center" data-bs-toggle="dropdown">
+                    <a role="button"
+  tabIndex="0" class="dropdown-toggle d-flex align-items-center" data-bs-toggle="dropdown">
                         <span class="avatar online avatar-sm">
 						<img src="assets/img/user/user-04.jpg" alt="Img" class="img-fluid rounded-circle">
 					</span>
@@ -323,7 +332,8 @@
 					<a href="seller-dashboard.html" class="dark-logo">
 						<img src="assets/img/dark-logo.svg" alt="Logo" class="img-fluid">
 					</a>
-					<a id="toggle_btn" href="#" class="active">
+					<a id="toggle_btn" role="button"
+  tabIndex="0" class="active">
 						<i class="ti ti-arrow-bar-right"></i>
 					</a>
 				</div>	
@@ -424,8 +434,10 @@
                                         </div>
                                     </div>
                                     <div class="gap-2 d-flex">
-                                        <a href="#" class="btn btn-md btn-dark"><i class="ti ti-user-edit me-1"></i>Edit Profile</a>
-                                        <a href="#" class="btn btn-md btn-primary"><i class="ti ti-phone me-1"></i>Contact Me</a>
+                                        <a role="button"
+  tabIndex="0" class="btn btn-md btn-dark"><i class="ti ti-user-edit me-1"></i>Edit Profile</a>
+                                        <a role="button"
+  tabIndex="0" class="btn btn-md btn-primary"><i class="ti ti-phone me-1"></i>Contact Me</a>
                                     </div>
 
                                 </div>
@@ -594,12 +606,14 @@
                                                 </div>
                                             </div>
                                             <div class="fav-selection">
-                                                <a href="#"><i class="ti ti-heart-filled"></i></a>
+                                                <a role="button"
+  tabIndex="0"><i class="ti ti-heart-filled"></i></a>
                                             </div>
                                         </div>
                                         <div class="gigs-content">
                                             <div class="gigs-info">
-                                                <a href="#" class="badge bg-primary-light">Software Development</a>
+                                                <a role="button"
+  tabIndex="0" class="badge bg-primary-light">Software Development</a>
                                             </div>
                                             <div class="gigs-title">
                                                 <h3>
@@ -629,12 +643,14 @@
                                                 </div>
                                             </div>
                                             <div class="fav-selection">
-                                                <a href="#"><i class="ti ti-heart-filled"></i></a>
+                                                <a role="button"
+  tabIndex="0"><i class="ti ti-heart-filled"></i></a>
                                             </div>
                                         </div>
                                         <div class="gigs-content">
                                             <div class="gigs-info">
-                                                <a href="#" class="badge bg-primary-light">Ecommerce Seo</a>
+                                                <a role="button"
+  tabIndex="0" class="badge bg-primary-light">Ecommerce Seo</a>
                                             </div>
                                             <div class="gigs-title">
                                                 <h3><a href="service-details.html">Creating, managing, and optimizing databases</a></h3>
@@ -662,12 +678,14 @@
                                                 </div>
                                             </div>
                                             <div class="fav-selection">
-                                                <a href="#"><i class="ti ti-heart-filled"></i></a>
+                                                <a role="button"
+  tabIndex="0"><i class="ti ti-heart-filled"></i></a>
                                             </div>
                                         </div>
                                         <div class="gigs-content">
                                             <div class="gigs-info">
-                                                <a href="#" class="badge bg-primary-light">Music & Audio</a>
+                                                <a role="button"
+  tabIndex="0" class="badge bg-primary-light">Music & Audio</a>
                                             </div>
                                             <div class="gigs-title">
                                                 <h3><a href="service-details.html">I will develop openai, chat gpt app for mobile</a></h3>
@@ -695,12 +713,14 @@
                                                 </div>
                                             </div>
                                             <div class="fav-selection">
-                                                <a href="#"><i class="ti ti-heart-filled"></i></a>
+                                                <a role="button"
+  tabIndex="0"><i class="ti ti-heart-filled"></i></a>
                                             </div>
                                         </div>
                                         <div class="gigs-content">
                                             <div class="gigs-info">
-                                                <a href="#" class="badge bg-primary-light">Music & Audio</a>
+                                                <a role="button"
+  tabIndex="0" class="badge bg-primary-light">Music & Audio</a>
                                             </div>
                                             <div class="gigs-title">
                                                 <h3><a href="service-details.html">I will develop openai, dalle, chat gpt app for mobile</a></h3>
