--- a/src/front-end/course-details.html
+++ b/src/front-end/course-details.html
@@ -58,7 +58,8 @@
 			<div class="container">
 				<nav class="navbar navbar-expand-lg header-nav p-0">
 					<div class="navbar-header">
-						<a id="mobile_btn" href="#">
+						<a id="mobile_btn" role="button"
+  tabIndex="0">
 							<span class="bar-icon">
 								<span></span>
 								<span></span>
@@ -84,18 +85,21 @@
 								<img src="assets/img/FUTURE CONNECT LOGO - LONG - WHITE.svg" alt="Logo"
 									class="img-fluid">
 							</a>
-							<a id="menu_close" class="menu-close" href="#"> <i class="fas fa-times"></i></a>
+							<a id="menu_close" class="menu-close" role="button"
+  tabIndex="0"> <i class="fas fa-times"></i></a>
 						</div>
 						<ul class="main-nav navbar-nav">
 							<li><a href="index.html" class="nav-link active">Home</a></li>
 
 							<li class="has-submenu">
-								<a href="#">Talents <i class="fas fa-chevron-down"></i></a>
+								<a role="button"
+  tabIndex="0">Talents <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
 									<li><a href="talents.html">All Talents</a></li>
 									<li><a href="register-talent.html">Register as Talent</a></li>
 									<li class="has-submenu">
-										<a href="#">Talent Categories <i class="fas fa-chevron-right"></i></a>
+										<a role="button"
+  tabIndex="0">Talent Categories <i class="fas fa-chevron-right"></i></a>
 										<ul class="submenu">
 											<li><a href="talents.html?category=music">Music & Performance</a></li>
 											<li><a href="talents.html?category=tech">Tech & Coding</a></li>
@@ -117,12 +121,14 @@
 </li>
 
 							<li class="has-submenu">
-								<a href="#">Stories <i class="fas fa-chevron-down"></i></a>
+								<a role="button"
+  tabIndex="0">Stories <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
 									<li><a href="stories.html">All Stories</a></li>
 									<li><a href="upload-story.html">Upload Story</a></li>
 									<li class="has-submenu">
-										<a href="#">Talent Categories <i class="fas fa-chevron-right"></i></a>
+										<a role="button"
+  tabIndex="0">Talent Categories <i class="fas fa-chevron-right"></i></a>
 										<ul class="submenu">
 											<li><a href="stories.html?category=music">Music & Performance</a></li>
 											<li><a href="stories.html?category=tech">Tech & Coding</a></li>
@@ -148,20 +154,23 @@
 					<div class="d-flex align-items-center">
 
 						<div class="nav-item dropdown flag-nav nav-item-box nav-item-box-home me-3">
-							<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#"
+							<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button"
+  tabIndex="0"
 								role="button">
 								<i class="ti ti-sun-high"></i>
 								<i class="ti ti-moon"></i>
 							</a>
 							<ul class="dropdown-menu p-2">
 								<li class="mb-1">
-									<a href="#" class="dropdown-item active theme-toggle rounded-2"
+									<a role="button"
+  tabIndex="0" class="dropdown-item active theme-toggle rounded-2"
 										id="light-mode-toggle">
 										<i class="ti ti-sun-high me-2"></i>Light Mode
 									</a>
 								</li>
 								<li>
-									<a href="#" class="dropdown-item theme-toggle rounded-2"
+									<a role="button"
+  tabIndex="0" class="dropdown-item theme-toggle rounded-2"
 										id="dark-mode-toggle">
 										<i class="ti ti-moon me-2"></i>Dark Mode
 									</a>
@@ -233,20 +242,26 @@
 					<div class="col-lg-4 col-12">
 						<ul class="breadcrumb-links service-details">
 							<li class="mb-3 me-0">
-								<a href="#"><span><i class="feather-heart"></i></span>Add to Favorites</a>
+								<a role="button"
+  tabIndex="0"><span><i class="feather-heart"></i></span>Add to Favorites</a>
 							</li>
 							<li class="me-0">
 								<div
 									class="social-links d-flex align-items-center breadcrumb-social justify-content-lg-end">
 									Share
 									<ul class="ms-3">
-										<li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-										<li><a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+										<li><a role="button"
+  tabIndex="0"><i class="fa-brands fa-facebook"></i></a></li>
+										<li><a role="button"
+  tabIndex="0"><i class="fa-brands fa-x-twitter"></i></a>
 										</li>
-										<li><a href="#"><i class="fa-brands fa-instagram"></i></a>
+										<li><a role="button"
+  tabIndex="0"><i class="fa-brands fa-instagram"></i></a>
 										</li>
-										<li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
-										<li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
+										<li><a role="button"
+  tabIndex="0"><i class="fa-brands fa-linkedin"></i></a></li>
+										<li><a role="button"
+  tabIndex="0"><i class="fa-brands fa-whatsapp"></i></a></li>
 									</ul>
 								</div>
 							</li>
@@ -450,8 +465,10 @@
 													Sort By: Most Recent
 												</button>
 												<ul class="dropdown-menu" aria-labelledby="sortReviewDropdown">
-													<li><a class="dropdown-item active" href="#">Most Recent</a></li>
-													<li><a class="dropdown-item" href="#">Oldest</a></li>
+													<li><a class="dropdown-item active" role="button"
+  tabIndex="0">Most Recent</a></li>
+													<li><a class="dropdown-item" role="button"
+  tabIndex="0">Oldest</a></li>
 												</ul>
 											</div>
 										</div>
@@ -533,7 +550,8 @@
 												<img src="assets/img/user/profile.jpg" alt="User Image">
 											</div>
 											<div class="reviewer-info">
-												<h6><a href="#">kadajsalamander</a></h6>
+												<h6><a role="button"
+  tabIndex="0">kadajsalamander</a></h6>
 												<div class="star-rate">
 													<span class="ratings"><i class="fa-solid fa-star filled"></i></span>
 													<span class="rating-count">5.0</span>
@@ -545,7 +563,8 @@
 											<p>I recently hired him to help with a project and I must say, I am
 												extremely impressed. Professional, efficient, and a pleasure to work
 												with.</p>
-											<a href="#" class="reply-btn bg-light"><i
+											<a role="button"
+  tabIndex="0" class="reply-btn bg-light"><i
 													class="feather-corner-up-left"></i> Reply</a>
 										</div>
 									</div>
@@ -633,7 +652,8 @@
 								</div>
 							</div>
 
-							<a href="#" data-bs-toggle="modal" data-bs-target="#order_details"
+							<a role="button"
+  tabIndex="0" data-bs-toggle="modal" data-bs-target="#order_details"
 								class="btn btn-primary w-100 mb-0"><i class="feather-book-open"></i> Subscribe to Full
 								Story</a>
 						</div>
@@ -676,9 +696,11 @@
 								<p>Hello, I’m Adrian, a storyteller passionate about weaving suspenseful and emotionally
 									gripping tales.<span class="more-content"> I’ve written over 20 published short
 										stories and love crafting immersive reading experiences.</span></p>
-								<a href="#" class="read-more">Read More</a>
+								<a role="button"
+  tabIndex="0" class="read-more">Read More</a>
 							</div>
-							<a href="#" data-bs-toggle="modal" data-bs-target="#contact_me"
+							<a role="button"
+  tabIndex="0" data-bs-toggle="modal" data-bs-target="#contact_me"
 								class="btn btn-primary mb-0 w-100">Contact Author</a>
 						</div>
 					</div>
@@ -723,9 +745,11 @@
 														class="fa-solid fa-meteor"></i>Hot</span></a>
 										</div>
 										<div class="fav-selection">
-											<a href="#" class="video-icon"><i
+											<a role="button"
+  tabIndex="0" class="video-icon"><i
 													class="feather-video"></i></a>
-											<a href="#" class="fav-icon"><i
+											<a role="button"
+  tabIndex="0" class="fav-icon"><i
 													class="feather-heart"></i></a>
 										</div>
 										<div class="user-thumb">
@@ -748,7 +772,8 @@
 										</div>
 										<div class="gigs-card-footer">
 											<div>
-												<a href="#" class="share-icon"><i
+												<a role="button"
+  tabIndex="0" class="share-icon"><i
 														class="feather-share-2"></i></a>
 												<span class="badge">Delivery in 1 day</span>
 											</div>
@@ -773,7 +798,8 @@
 											</div>
 										</div>
 										<div class="fav-selection">
-											<a href="#" class="fav-icon"><i
+											<a role="button"
+  tabIndex="0" class="fav-icon"><i
 													class="feather-heart"></i></a>
 										</div>
 										<div class="user-thumb">
@@ -796,7 +822,8 @@
 										</div>
 										<div class="gigs-card-footer">
 											<div>
-												<a href="#" class="share-icon"><i
+												<a role="button"
+  tabIndex="0" class="share-icon"><i
 														class="feather-share-2"></i></a>
 												<span class="badge">Delivery in 2 day</span>
 											</div>
@@ -821,7 +848,8 @@
 											</div>
 										</div>
 										<div class="fav-selection">
-											<a href="#" class="fav-icon"><i
+											<a role="button"
+  tabIndex="0" class="fav-icon"><i
 													class="feather-heart"></i></a>
 										</div>
 										<div class="user-thumb">
@@ -844,7 +872,8 @@
 										</div>
 										<div class="gigs-card-footer">
 											<div>
-												<a href="#" class="share-icon"><i
+												<a role="button"
+  tabIndex="0" class="share-icon"><i
 														class="feather-share-2"></i></a>
 												<span class="badge">Delivery in 1 day</span>
 											</div>
@@ -872,7 +901,8 @@
 											<span class="badge bg-danger"><i class="fa-solid fa-meteor"></i>Hot</span>
 										</div>
 										<div class="fav-selection">
-											<a href="#" class="fav-icon"><i
+											<a role="button"
+  tabIndex="0" class="fav-icon"><i
 													class="feather-heart"></i></a>
 										</div>
 										<div class="user-thumb">
@@ -895,7 +925,8 @@
 										</div>
 										<div class="gigs-card-footer">
 											<div>
-												<a href="#" class="share-icon"><i
+												<a role="button"
+  tabIndex="0" class="share-icon"><i
 														class="feather-share-2"></i></a>
 												<span class="badge">Delivery in 2 day</span>
 											</div>
@@ -996,11 +1027,16 @@
 						</a>
 						<div class="social-links">
 							<ul>
-								<li class="me-2"><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-								<li class="me-2"><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
-								<li class="me-2"><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-								<li class="me-2"><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
-								<li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+								<li class="me-2"><a role="button"
+  tabIndex="0"><i class="fa-brands fa-facebook"></i></a></li>
+								<li class="me-2"><a role="button"
+  tabIndex="0"><i class="fa-brands fa-x-twitter"></i></a></li>
+								<li class="me-2"><a role="button"
+  tabIndex="0"><i class="fa-brands fa-instagram"></i></a></li>
+								<li class="me-2"><a role="button"
+  tabIndex="0"><i class="fa-brands fa-linkedin"></i></a></li>
+								<li><a role="button"
+  tabIndex="0"><i class="fa-brands fa-youtube"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -1092,7 +1128,8 @@
 									<div class="modal-btn">
 										<div class="row gx-2">
 											<div class="col-6">
-												<a href="#" data-bs-dismiss="modal"
+												<a role="button"
+  tabIndex="0" data-bs-dismiss="modal"
 													class="btn btn-light text-dark w-100 justify-content-center">Cancel</a>
 											</div>
 											<div class="col-6">
