--- a/src/front-end/signin.html
+++ b/src/front-end/signin.html
@@ -144,12 +144,14 @@
                                     </div>
                                     <ul class="login-social-link">
                                         <li>
-                                            <a href="#">
+                                            <a role="button"
+  tabIndex="0">
                                                 <img src="assets/img/icons/google-icon.svg" alt="Facebook"> Google
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="#">
+                                            <a role="button"
+  tabIndex="0">
                                                 <img src="assets/img/icons/fb.svg" alt="Google"> Facebook
                                             </a>
                                         </li>
