--- a/src/front-end/talent-dashboard/seller-earnings.html
+++ b/src/front-end/talent-dashboard/seller-earnings.html
@@ -77,45 +77,53 @@
 					</ul>
 				</div>
                 <div class="nav-item dropdown dropdown-menu-end flag-nav nav-item-box">
-                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">
+                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button"
+  tabIndex="0" role="button">
                         <img src="assets/img/flags/us.svg" alt="Language" class="img-fluid">
                     </a>
                     <ul class="dropdown-menu p-2">
                         <li>
-                            <a href="#" class="dropdown-item justify-content-start">
+                            <a role="button"
+  tabIndex="0" class="dropdown-item justify-content-start">
                                 <img src="assets/img/flags/us.svg" alt="" height="16" class="me-2"> English
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="dropdown-item justify-content-start">
+                            <a role="button"
+  tabIndex="0" class="dropdown-item justify-content-start">
                                 <img src="assets/img/flags/de.svg" alt="" height="16" class="me-2"> German
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="dropdown-item justify-content-start">
+                            <a role="button"
+  tabIndex="0" class="dropdown-item justify-content-start">
                                 <img src="assets/img/flags/fr.svg" alt="" height="16" class="me-2"> French
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="dropdown-item justify-content-start">
+                            <a role="button"
+  tabIndex="0" class="dropdown-item justify-content-start">
                                 <img src="assets/img/flags/ae.svg" alt="" height="16" class="me-2"> Arabic
                             </a>
                         </li>
                     </ul>
                 </div>
                 <div class="nav-item dropdown flag-nav nav-item-box">
-                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">
+                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button"
+  tabIndex="0" role="button">
                         <i class="ti ti-sun-high"></i>
                         <i class="ti ti-moon"></i>
                     </a>
                     <ul class="dropdown-menu p-2">
                         <li class="mb-1">
-                            <a href="#" class="dropdown-item active theme-toggle" id="light-mode-toggle">
+                            <a role="button"
+  tabIndex="0" class="dropdown-item active theme-toggle" id="light-mode-toggle">
                                 <i class="ti ti-sun-high me-1"></i>Light Mode
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="dropdown-item theme-toggle" id="dark-mode-toggle">
+                            <a role="button"
+  tabIndex="0" class="dropdown-item theme-toggle" id="dark-mode-toggle">
                                 <i class="ti ti-moon me-1"></i>Dark Mode
                             </a>
                         </li>
@@ -262,7 +270,8 @@
                 </div>
                 </div>
                 <div class="mobile-user-menu">
-                    <a href="#" class="dropdown-toggle d-flex align-items-center" data-bs-toggle="dropdown">
+                    <a role="button"
+  tabIndex="0" class="dropdown-toggle d-flex align-items-center" data-bs-toggle="dropdown">
                         <span class="avatar online avatar-sm">
 						<img src="assets/img/user/user-04.jpg" alt="Img" class="img-fluid rounded-circle">
 					</span>
@@ -329,7 +338,8 @@
 					<a href="seller-dashboard.html" class="dark-logo">
 						<img src="assets/img/dark-logo.svg" alt="Logo" class="img-fluid">
 					</a>
-					<a id="toggle_btn" href="#" class="active">
+					<a id="toggle_btn" role="button"
+  tabIndex="0" class="active">
 						<i class="ti ti-arrow-bar-right"></i>
 					</a>
 				</div>	
@@ -517,12 +527,15 @@
                             <ul class="filter-item">
                                 <li>
                                     <div class="dropdown">
-                                        <a href="#" class="dropdown-toggle btn btn-white d-inline-flex align-items-center" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
+                                        <a role="button"
+  tabIndex="0" class="dropdown-toggle btn btn-white d-inline-flex align-items-center" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
                                             <i class="ti ti-user-code me-2"></i>Payment Type
                                         </a>
                                         <ul class="dropdown-menu dropdown-menu-lg p-2">
-                                            <li><a href="#" class="dropdown-item">Paypal</a></li>
-                                            <li><a href="#" class="dropdown-item">Stripe</a></li>
+                                            <li><a role="button"
+  tabIndex="0" class="dropdown-item">Paypal</a></li>
+                                            <li><a role="button"
+  tabIndex="0" class="dropdown-item">Stripe</a></li>
                                         </ul>
                                     </div>
                                 </li>
@@ -551,13 +564,16 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td><a href="#" class="text-grey fw-regular">#ER120</a></td>
+                                <td><a role="button"
+  tabIndex="0" class="text-grey fw-regular">#ER120</a></td>
                                 <td>
                                     <h2 class="table-avatar d-flex align-items-center">
-										<a href="#" class="avatar avatar-md">
+										<a role="button"
+  tabIndex="0" class="avatar avatar-md">
 											<img src="assets/img/gigs/gigs-09.jpg" class="" alt="User Image">
 										</a>
-										<a href="#" class="text-dark">I will do designing and executing targeted email campaigns</a>
+										<a role="button"
+  tabIndex="0" class="text-dark">I will do designing and executing targeted email campaigns</a>
 									</h2>
                                 </td>
                                 <td>
@@ -566,13 +582,16 @@
                                 <td class="text-start">-$45</td>
                             </tr>
                             <tr>
-                                <td><a href="#" class="text-grey fw-regular">#ER119</a></td>
+                                <td><a role="button"
+  tabIndex="0" class="text-grey fw-regular">#ER119</a></td>
                                 <td>
                                     <h2 class="table-avatar d-flex align-items-center">
-										<a href="#" class="avatar avatar-md">
+										<a role="button"
+  tabIndex="0" class="avatar avatar-md">
 											<img src="assets/img/gigs/gigs-10.jpg" class="" alt="User Image">
 										</a>
-										<a href="#" class="text-dark">I will do designing and executing...</a>
+										<a role="button"
+  tabIndex="0" class="text-dark">I will do designing and executing...</a>
 									</h2>
                                 </td>
                                 <td>
@@ -581,13 +600,16 @@
                                 <td class="text-start">-$65</td>
                             </tr>
                             <tr>
-                                <td><a href="#" class="text-grey fw-regular">#ER118</a></td>
+                                <td><a role="button"
+  tabIndex="0" class="text-grey fw-regular">#ER118</a></td>
                                 <td>
                                     <h2 class="table-avatar d-flex align-items-center">
-										<a href="#" class="avatar avatar-md">
+										<a role="button"
+  tabIndex="0" class="avatar avatar-md">
 											<img src="assets/img/gigs/gigs-02.jpg" class="" alt="User Image">
 										</a>
-										<a href="#" class="text-dark">I will develop openai, dalle, chat gpt app for mobile</a>
+										<a role="button"
+  tabIndex="0" class="text-dark">I will develop openai, dalle, chat gpt app for mobile</a>
 									</h2>
                                 </td>
                                 <td>
@@ -596,13 +618,16 @@
                                 <td class="text-start">-$45</td>
                             </tr>
                             <tr>
-                                <td><a href="#" class="text-grey fw-regular">#ER117</a></td>
+                                <td><a role="button"
+  tabIndex="0" class="text-grey fw-regular">#ER117</a></td>
                                 <td>
                                     <h2 class="table-avatar d-flex align-items-center">
-										<a href="#" class="avatar avatar-md">
+										<a role="button"
+  tabIndex="0" class="avatar avatar-md">
 											<img src="assets/img/gigs/gigs-03.jpg" class="" alt="User Image">
 										</a>
-										<a href="#" class="text-dark">Embedded Android & AOSP customizations</a>
+										<a role="button"
+  tabIndex="0" class="text-dark">Embedded Android & AOSP customizations</a>
 									</h2>
                                 </td>
                                 <td>
@@ -611,13 +636,16 @@
                                 <td class="text-start">-$95</td>
                             </tr>
                             <tr>
-                                <td><a href="#" class="text-grey fw-regular">#ER116</a></td>
+                                <td><a role="button"
+  tabIndex="0" class="text-grey fw-regular">#ER116</a></td>
                                 <td>
                                     <h2 class="table-avatar d-flex align-items-center">
-										<a href="#" class="avatar avatar-md">
+										<a role="button"
+  tabIndex="0" class="avatar avatar-md">
 											<img src="assets/img/gigs/gigs-07.jpg" class="" alt="User Image">
 										</a>
-										<a href="#" class="text-dark">I will do creating and promoting video content to engage audiences </a>
+										<a role="button"
+  tabIndex="0" class="text-dark">I will do creating and promoting video content to engage audiences </a>
 									</h2>
                                 </td>
                                 <td>
@@ -626,13 +654,16 @@
                                 <td class="text-start">-$25</td>
                             </tr>
                             <tr>
-                                <td><a href="#" class="text-grey fw-regular">#ER115</a></td>
+                                <td><a role="button"
+  tabIndex="0" class="text-grey fw-regular">#ER115</a></td>
                                 <td>
                                     <h2 class="table-avatar d-flex align-items-center">
-										<a href="#" class="avatar avatar-md">
+										<a role="button"
+  tabIndex="0" class="avatar avatar-md">
 											<img src="assets/img/gigs/gigs-12.jpg" class="" alt="User Image">
 										</a>
-										<a href="#" class="text-dark">I will do implementing chatbots on websites or messaging apps</a>
+										<a role="button"
+  tabIndex="0" class="text-dark">I will do implementing chatbots on websites or messaging apps</a>
 									</h2>
                                 </td>
                                 <td>
@@ -641,13 +672,16 @@
                                 <td class="text-start">-$65</td>
                             </tr>
                             <tr>
-                                <td><a href="#" class="text-grey fw-regular">#ER114</a></td>
+                                <td><a role="button"
+  tabIndex="0" class="text-grey fw-regular">#ER114</a></td>
                                 <td>
                                     <h2 class="table-avatar d-flex align-items-center">
-										<a href="#" class="avatar avatar-md">
+										<a role="button"
+  tabIndex="0" class="avatar avatar-md">
 											<img src="assets/img/gigs/gigs-15.jpg" class="" alt="User Image">
 										</a>
-										<a href="#" class="text-dark">I will develop openai, dalle, chat gpt app for mobile </a>
+										<a role="button"
+  tabIndex="0" class="text-dark">I will develop openai, dalle, chat gpt app for mobile </a>
 									</h2>
                                 </td>
                                 <td>
@@ -656,13 +690,16 @@
                                 <td class="text-start">-$97</td>
                             </tr>
                             <tr>
-                                <td><a href="#" class="text-grey fw-regular">#ER113</a></td>
+                                <td><a role="button"
+  tabIndex="0" class="text-grey fw-regular">#ER113</a></td>
                                 <td>
                                     <h2 class="table-avatar d-flex align-items-center">
-										<a href="#" class="avatar avatar-md">
+										<a role="button"
+  tabIndex="0" class="avatar avatar-md">
 											<img src="assets/img/gigs/gigs-13.jpg" class="" alt="User Image">
 										</a>
-										<a href="#" class="text-dark">I will do professional lifestyle and product photography</a>
+										<a role="button"
+  tabIndex="0" class="text-dark">I will do professional lifestyle and product photography</a>
 									</h2>
                                 </td>
                                 <td>
@@ -671,13 +708,16 @@
                                 <td class="text-start">-$45</td>
                             </tr>
                             <tr>
-                                <td><a href="#" class="text-grey fw-regular">#ER112</a></td>
+                                <td><a role="button"
+  tabIndex="0" class="text-grey fw-regular">#ER112</a></td>
                                 <td>
                                     <h2 class="table-avatar d-flex align-items-center">
-										<a href="#" class="avatar avatar-md">
+										<a role="button"
+  tabIndex="0" class="avatar avatar-md">
 											<img src="assets/img/gigs/gigs-01.jpg" class="" alt="User Image">
 										</a>
-										<a href="#" class="text-dark">Embedded Android & AOSP customizations</a>
+										<a role="button"
+  tabIndex="0" class="text-dark">Embedded Android & AOSP customizations</a>
 									</h2>
                                 </td>
                                 <td>
@@ -686,13 +726,16 @@
                                 <td class="text-start">-$45</td>
                             </tr>
                             <tr>
-                                <td><a href="#" class="text-grey fw-regular">#ER111</a></td>
+                                <td><a role="button"
+  tabIndex="0" class="text-grey fw-regular">#ER111</a></td>
                                 <td>
                                     <h2 class="table-avatar d-flex align-items-center">
-										<a href="#" class="avatar avatar-md">
+										<a role="button"
+  tabIndex="0" class="avatar avatar-md">
 											<img src="assets/img/gigs/gigs-09.jpg" class="" alt="User Image">
 										</a>
-										<a href="#" class="text-dark">I will do creating and promoting video content to engage audiences</a>
+										<a role="button"
+  tabIndex="0" class="text-dark">I will do creating and promoting video content to engage audiences</a>
 									</h2>
                                 </td>
                                 <td>
