--- a/src/front-end/talent-dashboard/seller-notifications.html
+++ b/src/front-end/talent-dashboard/seller-notifications.html
@@ -75,45 +75,53 @@
 					</ul>
 				</div>
                 <div class="nav-item dropdown dropdown-menu-end flag-nav nav-item-box">
-                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">
+                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button"
+  tabIndex="0" role="button">
                         <img src="assets/img/flags/us.svg" alt="Language" class="img-fluid">
                     </a>
                     <ul class="dropdown-menu p-2">
                         <li>
-                            <a href="#" class="dropdown-item justify-content-start">
+                            <a role="button"
+  tabIndex="0" class="dropdown-item justify-content-start">
                                 <img src="assets/img/flags/us.svg" alt="" height="16" class="me-2"> English
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="dropdown-item justify-content-start">
+                            <a role="button"
+  tabIndex="0" class="dropdown-item justify-content-start">
                                 <img src="assets/img/flags/de.svg" alt="" height="16" class="me-2"> German
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="dropdown-item justify-content-start">
+                            <a role="button"
+  tabIndex="0" class="dropdown-item justify-content-start">
                                 <img src="assets/img/flags/fr.svg" alt="" height="16" class="me-2"> French
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="dropdown-item justify-content-start">
+                            <a role="button"
+  tabIndex="0" class="dropdown-item justify-content-start">
                                 <img src="assets/img/flags/ae.svg" alt="" height="16" class="me-2"> Arabic
                             </a>
                         </li>
                     </ul>
                 </div>
                 <div class="nav-item dropdown flag-nav nav-item-box">
-                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">
+                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button"
+  tabIndex="0" role="button">
                         <i class="ti ti-sun-high"></i>
                         <i class="ti ti-moon"></i>
                     </a>
                     <ul class="dropdown-menu p-2">
                         <li class="mb-1">
-                            <a href="#" class="dropdown-item active theme-toggle" id="light-mode-toggle">
+                            <a role="button"
+  tabIndex="0" class="dropdown-item active theme-toggle" id="light-mode-toggle">
                                 <i class="ti ti-sun-high me-1"></i>Light Mode
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="dropdown-item theme-toggle" id="dark-mode-toggle">
+                            <a role="button"
+  tabIndex="0" class="dropdown-item theme-toggle" id="dark-mode-toggle">
                                 <i class="ti ti-moon me-1"></i>Dark Mode
                             </a>
                         </li>
@@ -260,7 +268,8 @@
                 </div>
                 </div>
                 <div class="mobile-user-menu">
-                    <a href="#" class="dropdown-toggle d-flex align-items-center" data-bs-toggle="dropdown">
+                    <a role="button"
+  tabIndex="0" class="dropdown-toggle d-flex align-items-center" data-bs-toggle="dropdown">
                         <span class="avatar online avatar-sm">
 						<img src="assets/img/user/user-04.jpg" alt="Img" class="img-fluid rounded-circle">
 					</span>
@@ -327,7 +336,8 @@
 					<a href="seller-dashboard.html" class="dark-logo">
 						<img src="assets/img/dark-logo.svg" alt="Logo" class="img-fluid">
 					</a>
-					<a id="toggle_btn" href="#" class="active">
+					<a id="toggle_btn" role="button"
+  tabIndex="0" class="active">
 						<i class="ti ti-arrow-bar-right"></i>
 					</a>
 				</div>	
@@ -431,10 +441,12 @@
 							</div>
 							<ul>
 								<li>
-									<a href="#" class="btn"><i class="feather-check"></i> Mark all as read</a>
+									<a role="button"
+  tabIndex="0" class="btn"><i class="feather-check"></i> Mark all as read</a>
 								</li>
 								<li>
-									<a href="#" class="btn btn-delete"><i class="feather-trash-2"></i> Delete all</a>
+									<a role="button"
+  tabIndex="0" class="btn btn-delete"><i class="feather-trash-2"></i> Delete all</a>
 								</li>
 							</ul>
 						</div>
@@ -458,8 +470,10 @@
 									<div class="col-lg-3">
 										<div class="d-lg-flex align-items-center justify-content-between">
 											<div class="noti-btn">
-												<a href="#" class="btn m-0">Decline</a>
-												<a href="#" class="btn btn-primary m-0">Accept</a>
+												<a role="button"
+  tabIndex="0" class="btn m-0">Decline</a>
+												<a role="button"
+  tabIndex="0" class="btn btn-primary m-0">Accept</a>
 											</div>
 											<p class="m-0"> 2 mins ago </p>
 										</div>
@@ -486,7 +500,8 @@
 									<div class="col-lg-3">
 										<div class="d-lg-flex align-items-center justify-content-end">
 											<div class="noti-btn me-3">
-												<a href="#" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#delete_review">Delete</a>
+												<a role="button"
+  tabIndex="0" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#delete_review">Delete</a>
 											</div>
 											<p class="m-0"> 2 mins ago </p>
 										</div>
@@ -513,7 +528,8 @@
 									<div class="col-lg-3">
 										<div class="d-lg-flex align-items-center justify-content-end">
 											<div class="noti-btn me-3">
-												<a href="#" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#delete_review">Delete</a>
+												<a role="button"
+  tabIndex="0" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#delete_review">Delete</a>
 											</div>
 											<p class="m-0"> 2 mins ago </p>
 										</div>
@@ -540,7 +556,8 @@
 									<div class="col-lg-3">
 										<div class="d-lg-flex align-items-center justify-content-end">
 											<div class="noti-btn me-3">
-												<a href="#" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#delete_review">Delete</a>
+												<a role="button"
+  tabIndex="0" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#delete_review">Delete</a>
 											</div>
 											<p class="m-0"> 2 mins ago </p>
 										</div>
@@ -567,7 +584,8 @@
 									<div class="col-lg-3">
 										<div class="d-lg-flex align-items-center justify-content-end">
 											<div class="noti-btn me-3">
-												<a href="#" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#delete_review">Delete</a>
+												<a role="button"
+  tabIndex="0" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#delete_review">Delete</a>
 											</div>
 											<p class="m-0"> 2 mins ago </p>
 										</div>
@@ -597,8 +615,10 @@
 						<h6 class="mb-1 text-center"> Are You Sure? </h6>
 						<p class="mb-4"> Want to permanently delete this item? </p>
 						<div class="delete-btn d-flex align-item-center justify-content-between gap-2">
-							<a href="#" class="btn btn-light w-100 bg-light close-btn" data-bs-dismiss="modal"> Cancel </a>
-							<a href="#" class="btn btn-primary w-100 close-btn" data-bs-dismiss="modal"> Delete </a>
+							<a role="button"
+  tabIndex="0" class="btn btn-light w-100 bg-light close-btn" data-bs-dismiss="modal"> Cancel </a>
+							<a role="button"
+  tabIndex="0" class="btn btn-primary w-100 close-btn" data-bs-dismiss="modal"> Delete </a>
 						</div>
 					</div>
 				</div>
