--- a/src/front-end/talent-dashboard/seller-reviews.html
+++ b/src/front-end/talent-dashboard/seller-reviews.html
@@ -87,45 +87,53 @@
 					</ul>
 				</div>
                 <div class="nav-item dropdown dropdown-menu-end flag-nav nav-item-box">
-                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">
+                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button"
+  tabIndex="0" role="button">
                         <img src="assets/img/flags/us.svg" alt="Language" class="img-fluid">
                     </a>
                     <ul class="dropdown-menu p-2">
                         <li>
-                            <a href="#" class="dropdown-item justify-content-start">
+                            <a role="button"
+  tabIndex="0" class="dropdown-item justify-content-start">
                                 <img src="assets/img/flags/us.svg" alt="" height="16" class="me-2"> English
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="dropdown-item justify-content-start">
+                            <a role="button"
+  tabIndex="0" class="dropdown-item justify-content-start">
                                 <img src="assets/img/flags/de.svg" alt="" height="16" class="me-2"> German
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="dropdown-item justify-content-start">
+                            <a role="button"
+  tabIndex="0" class="dropdown-item justify-content-start">
                                 <img src="assets/img/flags/fr.svg" alt="" height="16" class="me-2"> French
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="dropdown-item justify-content-start">
+                            <a role="button"
+  tabIndex="0" class="dropdown-item justify-content-start">
                                 <img src="assets/img/flags/ae.svg" alt="" height="16" class="me-2"> Arabic
                             </a>
                         </li>
                     </ul>
                 </div>
                 <div class="nav-item dropdown flag-nav nav-item-box">
-                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">
+                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button"
+  tabIndex="0" role="button">
                         <i class="ti ti-sun-high"></i>
                         <i class="ti ti-moon"></i>
                     </a>
                     <ul class="dropdown-menu p-2">
                         <li class="mb-1">
-                            <a href="#" class="dropdown-item active theme-toggle" id="light-mode-toggle">
+                            <a role="button"
+  tabIndex="0" class="dropdown-item active theme-toggle" id="light-mode-toggle">
                                 <i class="ti ti-sun-high me-1"></i>Light Mode
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="dropdown-item theme-toggle" id="dark-mode-toggle">
+                            <a role="button"
+  tabIndex="0" class="dropdown-item theme-toggle" id="dark-mode-toggle">
                                 <i class="ti ti-moon me-1"></i>Dark Mode
                             </a>
                         </li>
@@ -272,7 +280,8 @@
                 </div>
                 </div>
                 <div class="mobile-user-menu">
-                    <a href="#" class="dropdown-toggle d-flex align-items-center" data-bs-toggle="dropdown">
+                    <a role="button"
+  tabIndex="0" class="dropdown-toggle d-flex align-items-center" data-bs-toggle="dropdown">
                         <span class="avatar online avatar-sm">
 						<img src="assets/img/user/user-04.jpg" alt="Img" class="img-fluid rounded-circle">
 					</span>
@@ -339,7 +348,8 @@
 					<a href="seller-dashboard.html" class="dark-logo">
 						<img src="assets/img/dark-logo.svg" alt="Logo" class="img-fluid">
 					</a>
-					<a id="toggle_btn" href="#" class="active">
+					<a id="toggle_btn" role="button"
+  tabIndex="0" class="active">
 						<i class="ti ti-arrow-bar-right"></i>
 					</a>
 				</div>
@@ -441,7 +451,8 @@
                                             </div>
                                             <div class="reviewer-info">
                                                 <div class="reviewer-loc">
-                                                    <h6><a href="#">kadajsalamander</a></h6>
+                                                    <h6><a role="button"
+  tabIndex="0">kadajsalamander</a></h6>
                                                 </div>
                                                 <div class="reviewer-rating">
                                                     <div class="star-rate">
@@ -465,8 +476,10 @@
                                         </div>
                                     </div>
                                     <div class="table-action">
-                                        <a href="#" data-bs-toggle="modal" data-bs-target="#leave_review"><i class="feather-edit text-success"></i></a>
-                                        <a href="#" data-bs-toggle="modal" data-bs-target="#delete_review"><i class="feather-trash-2 text-error"></i></a>
+                                        <a role="button"
+  tabIndex="0" data-bs-toggle="modal" data-bs-target="#leave_review"><i class="feather-edit text-success"></i></a>
+                                        <a role="button"
+  tabIndex="0" data-bs-toggle="modal" data-bs-target="#delete_review"><i class="feather-trash-2 text-error"></i></a>
                                     </div>
                                 </div>
                             </li>
@@ -479,7 +492,8 @@
                                             </div>
                                             <div class="reviewer-info">
                                                 <div class="reviewer-loc">
-                                                    <h6><a href="#">Robert Metcalf</a></h6>
+                                                    <h6><a role="button"
+  tabIndex="0">Robert Metcalf</a></h6>
                                                 </div>
                                                 <div class="reviewer-rating">
                                                     <div class="star-rate">
@@ -503,8 +517,10 @@
                                         </div>
                                     </div>
                                     <div class="table-action">
-                                        <a href="#" data-bs-toggle="modal" data-bs-target="#leave_review"><i class="feather-edit text-success"></i></a>
-                                        <a href="#" data-bs-toggle="modal" data-bs-target="#delete_review"><i class="feather-trash-2 text-error"></i></a>
+                                        <a role="button"
+  tabIndex="0" data-bs-toggle="modal" data-bs-target="#leave_review"><i class="feather-edit text-success"></i></a>
+                                        <a role="button"
+  tabIndex="0" data-bs-toggle="modal" data-bs-target="#delete_review"><i class="feather-trash-2 text-error"></i></a>
                                     </div>
                                 </div>
                             </li>
@@ -517,7 +533,8 @@
                                             </div>
                                             <div class="reviewer-info">
                                                 <div class="reviewer-loc">
-                                                    <h6><a href="#">Betty Cheng</a></h6>
+                                                    <h6><a role="button"
+  tabIndex="0">Betty Cheng</a></h6>
                                                 </div>
                                                 <div class="reviewer-rating">
                                                     <div class="star-rate">
@@ -541,8 +558,10 @@
                                         </div>
                                     </div>
                                     <div class="table-action">
-                                        <a href="#" data-bs-toggle="modal" data-bs-target="#leave_review"><i class="feather-edit text-success"></i></a>
-                                        <a href="#" data-bs-toggle="modal" data-bs-target="#delete_review"><i class="feather-trash-2 text-error"></i></a>
+                                        <a role="button"
+  tabIndex="0" data-bs-toggle="modal" data-bs-target="#leave_review"><i class="feather-edit text-success"></i></a>
+                                        <a role="button"
+  tabIndex="0" data-bs-toggle="modal" data-bs-target="#delete_review"><i class="feather-trash-2 text-error"></i></a>
                                     </div>
                                 </div>
                             </li>
@@ -555,7 +574,8 @@
                                             </div>
                                             <div class="reviewer-info">
                                                 <div class="reviewer-loc">
-                                                    <h6><a href="#">Richard</a></h6>
+                                                    <h6><a role="button"
+  tabIndex="0">Richard</a></h6>
                                                 </div>
                                                 <div class="reviewer-rating">
                                                     <div class="star-rate">
@@ -579,8 +599,10 @@
                                         </div>
                                     </div>
                                     <div class="table-action">
-                                        <a href="#" data-bs-toggle="modal" data-bs-target="#leave_review"><i class="feather-edit text-success"></i></a>
-                                        <a href="#" data-bs-toggle="modal" data-bs-target="#delete_review"><i class="feather-trash-2 text-error"></i></a>
+                                        <a role="button"
+  tabIndex="0" data-bs-toggle="modal" data-bs-target="#leave_review"><i class="feather-edit text-success"></i></a>
+                                        <a role="button"
+  tabIndex="0" data-bs-toggle="modal" data-bs-target="#delete_review"><i class="feather-trash-2 text-error"></i></a>
                                     </div>
                                 </div>
                             </li>
@@ -589,7 +611,8 @@
                 </div>
                 <!-- /User Reviews -->
                 <div class="review-btn text-center">
-                    <a href="#" class="btn btn-dark text-white"> <i class="ti ti-loader-3 me-1 rotate"></i> Load more </a>
+                    <a role="button"
+  tabIndex="0" class="btn btn-dark text-white"> <i class="ti ti-loader-3 me-1 rotate"></i> Load more </a>
                 </div>
             </div>
         </div>
@@ -606,8 +629,10 @@
                                 <h6 class="mb-1 text-center"> Are You Sure? </h6>
                                 <p class="mb-4"> Want to permanently delete this item? </p>
                                 <div class="delete-btn d-flex align-item-center justify-content-between gap-2">
-                                    <a href="#" class="btn btn-light w-100 bg-light close-btn" data-bs-dismiss="modal"> Cancel </a>
-                                    <a href="#" class="btn btn-primary w-100 close-btn" data-bs-dismiss="modal"> Delete </a>
+                                    <a role="button"
+  tabIndex="0" class="btn btn-light w-100 bg-light close-btn" data-bs-dismiss="modal"> Cancel </a>
+                                    <a role="button"
+  tabIndex="0" class="btn btn-primary w-100 close-btn" data-bs-dismiss="modal"> Delete </a>
                                 </div>
                             </div>
                         </div>
@@ -658,7 +683,8 @@
                             </div>
                         </div>
                         <div class="modal-btn d-flex pt-3">
-                            <a href="#" class="btn btn-primary w-100">Submit a Review</a>
+                            <a role="button"
+  tabIndex="0" class="btn btn-primary w-100">Submit a Review</a>
                         </div>
                     </div>
                 </div>
