--- a/src/front-end/talent-dashboard/seller-transactions.html
+++ b/src/front-end/talent-dashboard/seller-transactions.html
@@ -77,45 +77,53 @@
                 </ul>
             </div>
             <div class="nav-item dropdown dropdown-menu-end flag-nav nav-item-box">
-                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">
+                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button"
+  tabIndex="0" role="button">
                     <img src="assets/img/flags/us.svg" alt="Language" class="img-fluid">
                 </a>
                 <ul class="dropdown-menu p-2">
                     <li>
-                        <a href="#" class="dropdown-item justify-content-start">
+                        <a role="button"
+  tabIndex="0" class="dropdown-item justify-content-start">
                             <img src="assets/img/flags/us.svg" alt="" height="16" class="me-2"> English
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="dropdown-item justify-content-start">
+                        <a role="button"
+  tabIndex="0" class="dropdown-item justify-content-start">
                             <img src="assets/img/flags/de.svg" alt="" height="16" class="me-2"> German
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="dropdown-item justify-content-start">
+                        <a role="button"
+  tabIndex="0" class="dropdown-item justify-content-start">
                             <img src="assets/img/flags/fr.svg" alt="" height="16" class="me-2"> French
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="dropdown-item justify-content-start">
+                        <a role="button"
+  tabIndex="0" class="dropdown-item justify-content-start">
                             <img src="assets/img/flags/ae.svg" alt="" height="16" class="me-2"> Arabic
                         </a>
                     </li>
                 </ul>
             </div>
             <div class="nav-item dropdown flag-nav nav-item-box">
-                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">
+                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button"
+  tabIndex="0" role="button">
                     <i class="ti ti-sun-high"></i>
                     <i class="ti ti-moon"></i>
                 </a>
                 <ul class="dropdown-menu p-2">
                     <li class="mb-1">
-                        <a href="#" class="dropdown-item active theme-toggle" id="light-mode-toggle">
+                        <a role="button"
+  tabIndex="0" class="dropdown-item active theme-toggle" id="light-mode-toggle">
                             <i class="ti ti-sun-high me-1"></i>Light Mode
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="dropdown-item theme-toggle" id="dark-mode-toggle">
+                        <a role="button"
+  tabIndex="0" class="dropdown-item theme-toggle" id="dark-mode-toggle">
                             <i class="ti ti-moon me-1"></i>Dark Mode
                         </a>
                     </li>
@@ -262,7 +270,8 @@
             </div>
             </div>
             <div class="mobile-user-menu">
-                <a href="#" class="dropdown-toggle d-flex align-items-center" data-bs-toggle="dropdown">
+                <a role="button"
+  tabIndex="0" class="dropdown-toggle d-flex align-items-center" data-bs-toggle="dropdown">
                     <span class="avatar online avatar-sm">
                     <img src="assets/img/user/user-04.jpg" alt="Img" class="img-fluid rounded-circle">
                 </span>
@@ -329,7 +338,8 @@
 					<a href="seller-dashboard.html" class="dark-logo">
 						<img src="assets/img/dark-logo.svg" alt="Logo" class="img-fluid">
 					</a>
-					<a id="toggle_btn" href="#" class="active">
+					<a id="toggle_btn" role="button"
+  tabIndex="0" class="active">
 						<i class="ti ti-arrow-bar-right"></i>
 					</a>
 				</div>
@@ -489,12 +499,15 @@
                             <ul class="filter-item">
                                 <li>
                                     <div class="dropdown">
-                                        <a href="#" class="dropdown-toggle btn btn-white d-inline-flex align-items-center" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
+                                        <a role="button"
+  tabIndex="0" class="dropdown-toggle btn btn-white d-inline-flex align-items-center" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
                                             <i class="ti ti-transition-top me-2"></i>Transaction Type
                                         </a>
                                         <ul class="dropdown-menu dropdown-menu-lg p-2">
-                                            <li><a href="#" class="dropdown-item">Debit</a></li>
-                                            <li><a href="#" class="dropdown-item">Credit</a></li>
+                                            <li><a role="button"
+  tabIndex="0" class="dropdown-item">Debit</a></li>
+                                            <li><a role="button"
+  tabIndex="0" class="dropdown-item">Credit</a></li>
                                         </ul>
                                     </div>
                                 </li>
@@ -535,10 +548,12 @@
                                 <td>#TXN-20250321-00123456</td>
                                 <td>
                                     <h2 class="table-avatar d-flex align-items-center">
-										<a href="#" class="avatar avatar-md">
+										<a role="button"
+  tabIndex="0" class="avatar avatar-md">
 											<img src="assets/img/gigs/gigs-09.jpg" class="" alt="User Image">
 										</a>
-										<a href="#" class="text-dark">I will do designing and executing...</a>
+										<a role="button"
+  tabIndex="0" class="text-dark">I will do designing and executing...</a>
 									</h2>
                                 </td>
                                 <td>
@@ -548,7 +563,8 @@
                                 <td class="text-start">-$45</td>
                                 <td>
                                     <div class="table-action">
-                                        <a href="#" class="border-rounded view-eye" data-bs-toggle="modal" data-bs-target="#transaction_details"><i class="feather-eye"></i></a>
+                                        <a role="button"
+  tabIndex="0" class="border-rounded view-eye" data-bs-toggle="modal" data-bs-target="#transaction_details"><i class="feather-eye"></i></a>
                                     </div>
                                 </td>
                             </tr>
@@ -557,10 +573,12 @@
                                 <td>#TXN-20250321-00123457</td>
                                 <td>
                                     <h2 class="table-avatar d-flex align-items-center">
-										<a href="#" class="avatar avatar-md">
+										<a role="button"
+  tabIndex="0" class="avatar avatar-md">
 											<img src="assets/img/gigs/gigs-03.jpg" class="" alt="User Image">
 										</a>
-										<a href="#" class="text-dark">I will develop openai, dalle, chat gpt app for mobile...</a>
+										<a role="button"
+  tabIndex="0" class="text-dark">I will develop openai, dalle, chat gpt app for mobile...</a>
 									</h2>
                                 </td>
                                 <td>
@@ -570,7 +588,8 @@
                                 <td class="text-start">-$45</td>
                                 <td>
                                     <div class="table-action">
-                                        <a href="#" class="border-rounded view-eye" data-bs-toggle="modal" data-bs-target="#transaction_details"><i class="feather-eye"></i></a>
+                                        <a role="button"
+  tabIndex="0" class="border-rounded view-eye" data-bs-toggle="modal" data-bs-target="#transaction_details"><i class="feather-eye"></i></a>
                                     </div>
                                 </td>
                             </tr>
@@ -579,10 +598,12 @@
                                 <td>#TXN-20250321-00123458</td>
                                 <td>
                                     <h2 class="table-avatar d-flex align-items-center">
-										<a href="#" class="avatar avatar-md">
+										<a role="button"
+  tabIndex="0" class="avatar avatar-md">
 											<img src="assets/img/gigs/gigs-02.jpg" class="" alt="User Image">
 										</a>
-										<a href="#" class="text-dark">I will do professional lifestyle and product photography</a>
+										<a role="button"
+  tabIndex="0" class="text-dark">I will do professional lifestyle and product photography</a>
 									</h2>
                                 </td>
                                 <td>
@@ -592,7 +613,8 @@
                                 <td class="text-start">-$95</td>
                                 <td>
                                     <div class="table-action">
-                                        <a href="#" class="border-rounded view-eye" data-bs-toggle="modal" data-bs-target="#transaction_details"><i class="feather-eye"></i></a>
+                                        <a role="button"
+  tabIndex="0" class="border-rounded view-eye" data-bs-toggle="modal" data-bs-target="#transaction_details"><i class="feather-eye"></i></a>
                                     </div>
                                 </td>
                             </tr>
@@ -601,10 +623,12 @@
                                 <td>#TXN-20250321-00123486</td>
                                 <td>
                                     <h2 class="table-avatar d-flex align-items-center">
-										<a href="#" class="avatar avatar-md">
+										<a role="button"
+  tabIndex="0" class="avatar avatar-md">
 											<img src="assets/img/gigs/gigs-04.jpg" class="" alt="User Image">
 										</a>
-										<a href="#" class="text-dark">Embedded Android & AOSP customizations</a>
+										<a role="button"
+  tabIndex="0" class="text-dark">Embedded Android & AOSP customizations</a>
 									</h2>
                                 </td>
                                 <td>
@@ -614,7 +638,8 @@
                                 <td class="text-start">-$75</td>
                                 <td>
                                     <div class="table-action">
-                                        <a href="#" class="border-rounded view-eye" data-bs-toggle="modal" data-bs-target="#transaction_details"><i class="feather-eye"></i></a>
+                                        <a role="button"
+  tabIndex="0" class="border-rounded view-eye" data-bs-toggle="modal" data-bs-target="#transaction_details"><i class="feather-eye"></i></a>
                                     </div>
                                 </td>
                             </tr>
@@ -623,10 +648,12 @@
                                 <td>#TXN-20250321-001234586</td>
                                 <td>
                                     <h2 class="table-avatar d-flex align-items-center">
-										<a href="#" class="avatar avatar-md">
+										<a role="button"
+  tabIndex="0" class="avatar avatar-md">
 											<img src="assets/img/gigs/gigs-13.jpg" class="" alt="User Image">
 										</a>
-										<a href="#" class="text-dark">I will do creating and promoting video content to engage audiences </a>
+										<a role="button"
+  tabIndex="0" class="text-dark">I will do creating and promoting video content to engage audiences </a>
 									</h2>
                                 </td>
                                 <td>
@@ -636,7 +663,8 @@
                                 <td class="text-start">-$25</td>
                                 <td>
                                     <div class="table-action">
-                                        <a href="#" class="border-rounded view-eye" data-bs-toggle="modal" data-bs-target="#transaction_details"><i class="feather-eye"></i></a>
+                                        <a role="button"
+  tabIndex="0" class="border-rounded view-eye" data-bs-toggle="modal" data-bs-target="#transaction_details"><i class="feather-eye"></i></a>
                                     </div>
                                 </td>
                             </tr>
@@ -645,10 +673,12 @@
                                 <td>#TXN-20250321-00123152</td>
                                 <td>
                                     <h2 class="table-avatar d-flex align-items-center">
-										<a href="#" class="avatar avatar-md">
+										<a role="button"
+  tabIndex="0" class="avatar avatar-md">
 											<img src="assets/img/gigs/gigs-05.jpg" class="" alt="User Image">
 										</a>
-										<a href="#" class="text-dark">I will do implementing chatbots on websites or messaging apps</a>
+										<a role="button"
+  tabIndex="0" class="text-dark">I will do implementing chatbots on websites or messaging apps</a>
 									</h2>
                                 </td>
                                 <td>
@@ -658,7 +688,8 @@
                                 <td class="text-start">-$45</td>
                                 <td>
                                     <div class="table-action">
-                                        <a href="#" class="border-rounded view-eye" data-bs-toggle="modal" data-bs-target="#transaction_details"><i class="feather-eye"></i></a>
+                                        <a role="button"
+  tabIndex="0" class="border-rounded view-eye" data-bs-toggle="modal" data-bs-target="#transaction_details"><i class="feather-eye"></i></a>
                                     </div>
                                 </td>
                             </tr>
@@ -667,10 +698,12 @@
                                 <td>#TXN-20250321-00123498</td>
                                 <td>
                                     <h2 class="table-avatar d-flex align-items-center">
-										<a href="#" class="avatar avatar-md">
+										<a role="button"
+  tabIndex="0" class="avatar avatar-md">
 											<img src="assets/img/gigs/gigs-09.jpg" class="" alt="User Image">
 										</a>
-										<a href="#" class="text-dark">II will develop openai, dalle, chat gpt app for mobile </a>
+										<a role="button"
+  tabIndex="0" class="text-dark">II will develop openai, dalle, chat gpt app for mobile </a>
 									</h2>
                                 </td>
                                 <td>
@@ -680,7 +713,8 @@
                                 <td class="text-start">-$87</td>
                                 <td>
                                     <div class="table-action">
-                                        <a href="#" class="border-rounded view-eye" data-bs-toggle="modal" data-bs-target="#transaction_details"><i class="feather-eye"></i></a>
+                                        <a role="button"
+  tabIndex="0" class="border-rounded view-eye" data-bs-toggle="modal" data-bs-target="#transaction_details"><i class="feather-eye"></i></a>
                                     </div>
                                 </td>
                             </tr>
@@ -689,10 +723,12 @@
                                 <td>#TXN-20250321-00123259</td>
                                 <td>
                                     <h2 class="table-avatar d-flex align-items-center">
-										<a href="#" class="avatar avatar-md">
+										<a role="button"
+  tabIndex="0" class="avatar avatar-md">
 											<img src="assets/img/gigs/gigs-10.jpg" class="" alt="User Image">
 										</a>
-										<a href="#" class="text-dark">I will do professional lifestyle and product photography</a>
+										<a role="button"
+  tabIndex="0" class="text-dark">I will do professional lifestyle and product photography</a>
 									</h2>
                                 </td>
                                 <td>
@@ -702,7 +738,8 @@
                                 <td class="text-start">-$95</td>
                                 <td>
                                     <div class="table-action">
-                                        <a href="#" class="border-rounded view-eye" data-bs-toggle="modal" data-bs-target="#transaction_details"><i class="feather-eye"></i></a>
+                                        <a role="button"
+  tabIndex="0" class="border-rounded view-eye" data-bs-toggle="modal" data-bs-target="#transaction_details"><i class="feather-eye"></i></a>
                                     </div>
                                 </td>
                             </tr>
@@ -711,10 +748,12 @@
                                 <td>#TXN-20250321-001123456</td>
                                 <td>
                                     <h2 class="table-avatar d-flex align-items-center">
-										<a href="#" class="avatar avatar-md">
+										<a role="button"
+  tabIndex="0" class="avatar avatar-md">
 											<img src="assets/img/gigs/gigs-04.jpg" class="" alt="User Image">
 										</a>
-										<a href="#" class="text-dark">I will do designing and executing...</a>
+										<a role="button"
+  tabIndex="0" class="text-dark">I will do designing and executing...</a>
 									</h2>
                                 </td>
                                 <td>
@@ -724,7 +763,8 @@
                                 <td class="text-start">-$25</td>
                                 <td>
                                     <div class="table-action">
-                                        <a href="#" class="border-rounded view-eye" data-bs-toggle="modal" data-bs-target="#transaction_details"><i class="feather-eye"></i></a>
+                                        <a role="button"
+  tabIndex="0" class="border-rounded view-eye" data-bs-toggle="modal" data-bs-target="#transaction_details"><i class="feather-eye"></i></a>
                                     </div>
                                 </td>
                             </tr>
@@ -733,10 +773,12 @@
                                 <td>#TXN-20250321-00123976</td>
                                 <td>
                                     <h2 class="table-avatar d-flex align-items-center">
-										<a href="#" class="avatar avatar-md">
+										<a role="button"
+  tabIndex="0" class="avatar avatar-md">
 											<img src="assets/img/gigs/gigs-08.jpg" class="" alt="User Image">
 										</a>
-										<a href="#" class="text-dark" data-bs-toggle="modal" data-bs-target="#transaction_details">I will do designing and executing...</a>
+										<a role="button"
+  tabIndex="0" class="text-dark" data-bs-toggle="modal" data-bs-target="#transaction_details">I will do designing and executing...</a>
 									</h2>
                                 </td>
                                 <td>
@@ -746,7 +788,8 @@
                                 <td class="text-start">-$45</td>
                                 <td>
                                     <div class="table-action">
-                                        <a href="#" class="border-rounded view-eye" data-bs-toggle="modal" data-bs-target="#transaction_details"><i class="feather-eye"></i></a>
+                                        <a role="button"
+  tabIndex="0" class="border-rounded view-eye" data-bs-toggle="modal" data-bs-target="#transaction_details"><i class="feather-eye"></i></a>
                                     </div>
                                 </td>
                             </tr>
