--- a/src/front-end/team.html
+++ b/src/front-end/team.html
@@ -58,7 +58,8 @@
 			<div class="container">
 				<nav class="navbar navbar-expand-lg header-nav p-0">
 					<div class="navbar-header">
-						<a id="mobile_btn" href="#">
+						<a id="mobile_btn" role="button"
+  tabIndex="0">
 							<span class="bar-icon">
 								<span></span>
 								<span></span>
@@ -83,7 +84,8 @@
 							<a href="index.html" class="menu-logo dark-logo">
 								<img src="assets/img/FUTURE CONNECT LOGO - LONG - WHITE.svg" alt="Logo" class="img-fluid">
 							</a>
-							<a id="menu_close" class="menu-close" href="#"> <i class="fas fa-times"></i></a>
+							<a id="menu_close" class="menu-close" role="button"
+  tabIndex="0"> <i class="fas fa-times"></i></a>
 						</div>
 						<ul class="main-nav navbar-nav">
 							<li><a href="index.html" class="nav-link active">Home</a></li>
@@ -97,12 +99,14 @@
 							</li>
 
 							<li class="has-submenu">
-	<a href="#">Stories <i class="fas fa-chevron-down"></i></a>
+	<a role="button"
+  tabIndex="0">Stories <i class="fas fa-chevron-down"></i></a>
 	<ul class="submenu">
 		<li><a href="stories.html">All Stories</a></li>
 		<li><a href="upload-story.html">Upload Story</a></li>
 		<li class="has-submenu">
-			<a href="#">Talent Categories <i class="fas fa-chevron-right"></i></a>
+			<a role="button"
+  tabIndex="0">Talent Categories <i class="fas fa-chevron-right"></i></a>
 			<ul class="submenu">
 				<li><a href="stories.html?category=music">Music & Performance</a></li>
 				<li><a href="stories.html?category=tech">Tech & Coding</a></li>
@@ -122,7 +126,8 @@
 							<li><a href="donate.html">Support Talents</a></li>
 
 							<li class="has-submenu">
-								<a href="#">Pages <i class="fas fa-chevron-down"></i></a>
+								<a role="button"
+  tabIndex="0">Pages <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
 									<li><a href="about-us.html">About Future Connect</a></li>
 									<li><a href="team.html">Our Team</a></li>
@@ -141,20 +146,23 @@
 					<div class="d-flex align-items-center">
 						
 						<div class="nav-item dropdown flag-nav nav-item-box nav-item-box-home me-3">
-							<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#"
+							<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button"
+  tabIndex="0"
 								role="button">
 								<i class="ti ti-sun-high"></i>
 								<i class="ti ti-moon"></i>
 							</a>
 							<ul class="dropdown-menu p-2">
 								<li class="mb-1">
-									<a href="#" class="dropdown-item active theme-toggle rounded-2"
+									<a role="button"
+  tabIndex="0" class="dropdown-item active theme-toggle rounded-2"
 										id="light-mode-toggle">
 										<i class="ti ti-sun-high me-2"></i>Light Mode
 									</a>
 								</li>
 								<li>
-									<a href="#" class="dropdown-item theme-toggle rounded-2"
+									<a role="button"
+  tabIndex="0" class="dropdown-item theme-toggle rounded-2"
 										id="dark-mode-toggle">
 										<i class="ti ti-moon me-2"></i>Dark Mode
 									</a>
@@ -233,13 +241,16 @@
                                     <p>Chief Executing Officer</p>
                                 </div>
                                 <div class="team-social-links">
-                                    <a href="#" target="_blank">
+                                    <a role="button"
+  tabIndex="0" target="_blank">
                                         <i class="feather-facebook hi-icon"></i>
                                     </a>
-                                    <a href="#" target="_blank">
+                                    <a role="button"
+  tabIndex="0" target="_blank">
                                         <i class="feather-twitter hi-icon"></i>
                                     </a>
-                                    <a href="#" target="_blank">
+                                    <a role="button"
+  tabIndex="0" target="_blank">
                                         <i class="feather-linkedin hi-icon"></i>
                                     </a>
                                 </div>
@@ -267,13 +278,16 @@
                                     <p>Chief Technology Officer</p>
                                 </div>
                                 <div class="team-social-links">
-                                    <a href="#" target="_blank">
+                                    <a role="button"
+  tabIndex="0" target="_blank">
                                         <i class="feather-facebook hi-icon"></i>
                                     </a>
-                                    <a href="#" target="_blank">
+                                    <a role="button"
+  tabIndex="0" target="_blank">
                                         <i class="feather-twitter hi-icon"></i>
                                     </a>
-                                    <a href="#" target="_blank">
+                                    <a role="button"
+  tabIndex="0" target="_blank">
                                         <i class="feather-linkedin hi-icon"></i>
                                     </a>
                                 </div>
@@ -301,13 +315,16 @@
                                     <p>Chief Financial Officer</p>
                                 </div>
                                 <div class="team-social-links">
-                                    <a href="#" target="_blank">
+                                    <a role="button"
+  tabIndex="0" target="_blank">
                                         <i class="feather-facebook hi-icon"></i>
                                     </a>
-                                    <a href="#" target="_blank">
+                                    <a role="button"
+  tabIndex="0" target="_blank">
                                         <i class="feather-twitter hi-icon"></i>
                                     </a>
-                                    <a href="#" target="_blank">
+                                    <a role="button"
+  tabIndex="0" target="_blank">
                                         <i class="feather-linkedin hi-icon"></i>
                                     </a>
                                 </div>
@@ -335,13 +352,16 @@
                                     <p>Lead Software Developer</p>
                                 </div>
                                 <div class="team-social-links">
-                                    <a href="#" target="_blank">
+                                    <a role="button"
+  tabIndex="0" target="_blank">
                                         <i class="feather-facebook hi-icon"></i>
                                     </a>
-                                    <a href="#" target="_blank">
+                                    <a role="button"
+  tabIndex="0" target="_blank">
                                         <i class="feather-twitter hi-icon"></i>
                                     </a>
-                                    <a href="#" target="_blank">
+                                    <a role="button"
+  tabIndex="0" target="_blank">
                                         <i class="feather-linkedin hi-icon"></i>
                                     </a>
                                 </div>
@@ -369,13 +389,16 @@
                                     <p>UI/UX Designer</p>
                                 </div>
                                 <div class="team-social-links">
-                                    <a href="#" target="_blank">
+                                    <a role="button"
+  tabIndex="0" target="_blank">
                                         <i class="feather-facebook hi-icon"></i>
                                     </a>
-                                    <a href="#" target="_blank">
+                                    <a role="button"
+  tabIndex="0" target="_blank">
                                         <i class="feather-twitter hi-icon"></i>
                                     </a>
-                                    <a href="#" target="_blank">
+                                    <a role="button"
+  tabIndex="0" target="_blank">
                                         <i class="feather-linkedin hi-icon"></i>
                                     </a>
                                 </div>
@@ -403,13 +426,16 @@
                                     <p>Data Analyst</p>
                                 </div>
                                 <div class="team-social-links">
-                                    <a href="#" target="_blank">
+                                    <a role="button"
+  tabIndex="0" target="_blank">
                                         <i class="feather-facebook hi-icon"></i>
                                     </a>
-                                    <a href="#" target="_blank">
+                                    <a role="button"
+  tabIndex="0" target="_blank">
                                         <i class="feather-twitter hi-icon"></i>
                                     </a>
-                                    <a href="#" target="_blank">
+                                    <a role="button"
+  tabIndex="0" target="_blank">
                                         <i class="feather-linkedin hi-icon"></i>
                                     </a>
                                 </div>
@@ -437,13 +463,16 @@
                                     <p>Sales Manager</p>
                                 </div>
                                 <div class="team-social-links">
-                                    <a href="#" target="_blank">
+                                    <a role="button"
+  tabIndex="0" target="_blank">
                                         <i class="feather-facebook hi-icon"></i>
                                     </a>
-                                    <a href="#" target="_blank">
+                                    <a role="button"
+  tabIndex="0" target="_blank">
                                         <i class="feather-twitter hi-icon"></i>
                                     </a>
-                                    <a href="#" target="_blank">
+                                    <a role="button"
+  tabIndex="0" target="_blank">
                                         <i class="feather-linkedin hi-icon"></i>
                                     </a>
                                 </div>
@@ -471,13 +500,16 @@
                                     <p>Product Manager</p>
                                 </div>
                                 <div class="team-social-links">
-                                    <a href="#" target="_blank">
+                                    <a role="button"
+  tabIndex="0" target="_blank">
                                         <i class="feather-facebook hi-icon"></i>
                                     </a>
-                                    <a href="#" target="_blank">
+                                    <a role="button"
+  tabIndex="0" target="_blank">
                                         <i class="feather-twitter hi-icon"></i>
                                     </a>
-                                    <a href="#" target="_blank">
+                                    <a role="button"
+  tabIndex="0" target="_blank">
                                         <i class="feather-linkedin hi-icon"></i>
                                     </a>
                                 </div>
@@ -505,13 +537,16 @@
                                     <p>Operations Manager</p>
                                 </div>
                                 <div class="team-social-links">
-                                    <a href="#" target="_blank">
+                                    <a role="button"
+  tabIndex="0" target="_blank">
                                         <i class="feather-facebook hi-icon"></i>
                                     </a>
-                                    <a href="#" target="_blank">
+                                    <a role="button"
+  tabIndex="0" target="_blank">
                                         <i class="feather-twitter hi-icon"></i>
                                     </a>
-                                    <a href="#" target="_blank">
+                                    <a role="button"
+  tabIndex="0" target="_blank">
                                         <i class="feather-linkedin hi-icon"></i>
                                     </a>
                                 </div>
@@ -526,25 +561,32 @@
                 <div class="pagination">
                     <ul>
                         <li>
-                            <a href="#" class="previous"><i class="fa-solid fa-chevron-left"></i></a>
+                            <a role="button"
+  tabIndex="0" class="previous"><i class="fa-solid fa-chevron-left"></i></a>
                         </li>
                         <li>
-                            <a href="#" class="active">1</a>
+                            <a role="button"
+  tabIndex="0" class="active">1</a>
                         </li>
                         <li>
-                            <a href="#">2</a>
+                            <a role="button"
+  tabIndex="0">2</a>
                         </li>
                         <li>
-                            <a href="#">3</a>
+                            <a role="button"
+  tabIndex="0">3</a>
                         </li>
                         <li>
-                            <a href="#">4</a>
+                            <a role="button"
+  tabIndex="0">4</a>
                         </li>
                         <li>
-                            <a href="#">5</a>
+                            <a role="button"
+  tabIndex="0">5</a>
                         </li>
                         <li>
-                            <a href="#" class="next"><i class="fa-solid fa-chevron-right"></i></a>
+                            <a role="button"
+  tabIndex="0" class="next"><i class="fa-solid fa-chevron-right"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -636,11 +678,16 @@
 						</a>
 						<div class="social-links">
 							<ul>
-								<li class="me-2"><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-								<li class="me-2"><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
-								<li class="me-2"><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-								<li class="me-2"><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
-								<li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+								<li class="me-2"><a role="button"
+  tabIndex="0"><i class="fa-brands fa-facebook"></i></a></li>
+								<li class="me-2"><a role="button"
+  tabIndex="0"><i class="fa-brands fa-x-twitter"></i></a></li>
+								<li class="me-2"><a role="button"
+  tabIndex="0"><i class="fa-brands fa-instagram"></i></a></li>
+								<li class="me-2"><a role="button"
+  tabIndex="0"><i class="fa-brands fa-linkedin"></i></a></li>
+								<li><a role="button"
+  tabIndex="0"><i class="fa-brands fa-youtube"></i></a></li>
 							</ul>
 						</div>
 					</div>
